v2690 https://xreveal.com/lang_changes_2690.html

--- a/Xreveal_ARA.ini
+++ b/Xreveal_ARA.ini
@@ -43,6 +43,7 @@ Author=فتحي الداودية
 7=&التحقق من وجود تحديثات تلقائيا
 8=<a>Check now</a>
 9=Automatically &report open failures to improve Xreveal
+10=&Prevent the system from sleeping while ripping
 
 [DIALOG_9]
 0=قرص
@@ -50,17 +51,18 @@ Author=فتحي الداودية
 
 [DIALOG_10]
 0=DVD
-3=DVD تمكين دعم
+3=&Enable DVD support
 4=إزالة رمز منطقة البرنامج
 5=إزالة حماية تحسين رمز المنطقة
 6=منطقة القرص:
 7=إزالة نظام الحماية التناظرية
 8=إزالة عمليات المستخدم المحظورة
 9=Remove ARccOS
+11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
 0=Blu-ray
-3=Blu-ray تمكين دعم
+3=&Enable Blu-ray support
 4=BD+ إزالة حماية
 5=Blu-ray إزالة رمز منطقة
 6=منطقة القرص:
@@ -87,20 +89,29 @@ Author=فتحي الداودية
 8=Enable &LibreDrive for UHD
 
 [DIALOG_14]
-0=التمزق إلى الصورة...
-1=بدء
-2=قف
-3=&محرك المصدر:
-4=&الملف الوجهة:
-5=(Blu-ray) حافظ على الحماية
-6=&Verify content hash
+1=Start
+3=Source
+4=Destination
+5=Options
+6=Info
+7=Type:
+8=Capacity:
+9=Protection:
+10=Free space:
+11=Capacity:
+12=&Keep protection
+13=&Verify content hash
+14=Create &md5 checksum file
+15=Create &dvdid.xml
 
 [DIALOG_15]
-0=مزق إلى القرص الصلب...
-1=يدء
-2=قف
-3=&محرك المصدر:
-4=&دليل الوجهة:
+0=Xreveal
+3=Source:
+4=Destination:
+6=Time elapsed:
+7=Time remaining:
+8=Read errors:
+9=Read rate:
 
 [DIALOG_16]
 0=منطقة مشغلات
@@ -118,14 +129,16 @@ Author=فتحي الداودية
 
 [DIALOG_19]
 0=Hotkeys
-3=Create hotkeys to quickly access some functions.
-4=Xreveal menu:
-5=Settings:
-6=Enable Xreveal:
+3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
+4=Show Xreveal system tray menu:
+5=Show settings window:
+6=Enable/Disable Xreveal:
+7=Rip to ISO file:
+8=Rip to folder:
 
 [DIALOG_20]
 0=HD DVD
-3=Remove &AACS (Advanced Access Content System)
+3=&Enable HD DVD support
 4=Remove &first play title
 5=Remove &UOPs (User Operation Prohibitions)
 6=Remove &parental restrictions
@@ -145,15 +158,33 @@ Author=فتحي الداودية
 
 [DIALOG_24]
 0=Drive Information
+3=Drive:
+4=Serial number:
+5=Vendor specific:
+6=Bus encryption capable:
 
 [DIALOG_25]
 0=Import...
 3=Source keydb.db:
 4=Select or drop source keydb.db here
-5=Destination keydb.db：
+5=Destination keydb.db:
 
 [DIALOG_26]
 0=Content Hash Verifier
+
+[DIALOG_27]
+0=Sounds
+3=Play sound after opening disc
+4=Play sound after ripping disc
+5=Success sound:
+6=Error sound:
+
+[DIALOG_28]
+0=Create Dump File
+3=Please wait...
+4=Adding %s...
+5=<a>How to submit dump files?</a>
+6=The file has been successfully created.
 
 [DIALOG_A]
 0=تحديث البرامج
@@ -201,11 +232,11 @@ Author=فتحي الداودية
 18=قيد التشغيل. %s إذا كان Xreveal لن يعمل.\n\nهل تريد إغلاقه?
 19=%C هو محرك أقراص المسح الضوئي Xreveal:
 20=سيكون القرص الذي قمت بإدخاله متاحا قريبا ، يرجى الانتظار!
-21=%C:غير نشط لمحرك الأقراص Xreveal !
-22=%C: لا توجد مساحة حرة كافية على محرك الأقراص !
+21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
+22=Directory '%s' has not enough space!\nYou need an additional %s.
 23=%s نسخ ...
-24=%s, الوقت المتبقي: %s :م ب/ثانية، الوقت المنقضي %.1f 
-25=اكتملت العملية بنجاح!
+24=%.1f MB/s
+25=Operation successfully completed!
 26=No decryption key found in {%s}
 27=No BD+ FUT found
 28=Xreveal failed to open disc, error code: %s.
@@ -221,8 +252,8 @@ Author=فتحي الداودية
 38=%C:
 39=%C:\[%S]
 40=&الحالة
-41=&افتح
-42=&إنشاء ملف السجل
+41=&Open in Explorer
+42=&Create Dump File
 43=& BD+ Fixup Table اظهار
 44=النسخ إلى &القرص الصلب...
 45=النسخ إلى &صورة...
@@ -240,7 +271,7 @@ Author=فتحي الداودية
 57=This program is freeware.\n\nIf this program is useful to you, you can make a <a>donation</a> to help us improve it.
 58=موجود بالفعل %s .\nهل تريد استبداله?
 59=هل انت متاكد انك تريد الغاء؟
-60=Blu-ray منطقة مشغلات
+60=Your license expired on %s.
 61=المشغل
 62=رمز المنطقة
 63=التغييرات المتبقية
@@ -264,7 +295,7 @@ Author=فتحي الداودية
 81=Date added
 82=MKB
 83=Main playlist
-84=BDP date
+84=BD+ date
 85=
 86=VID
 87=MK
@@ -292,3 +323,28 @@ Author=فتحي الداودية
 109=Command line version (Windows/macOS/Linux)
 110=Abort
 111=Vendor specific
+112=Directory %s doesn't exist. Do you want to create it?
+113=When done: 
+114=Do nothing
+115=, 
+116=Eject disc
+117=Play sound
+118=Quit Xreveal
+119=No action
+120=Shutdown
+121=Sleep
+122=Hibernate
+123=Lock system
+124=Log off
+125=All Files
+126=ISO Files
+127=WAV Files
+128=KeyDB Files
+129=Database Files
+130=Select or drop the WAV file here
+131=Select or drop the KeyDB.cfg here
+132=%u%% complete
+133=Error reading from drive %C:!\nSectors: %u-%u
+134=Error reading %s!\nSectors: %u-%u
+135=Abort request acknowledged
+136=Copying...
