--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -43,6 +43,7 @@ Author=jekovcar
 7=&Автоматична проверка за актуализации
 8=<a>Провери сега</a>
 9=Автоматично & съобщавай за отворени сривове, за подобряване на Xreveal
+10=&Prevent the system from sleeping while ripping
 
 [DIALOG_9]
 0=CD
@@ -50,17 +51,18 @@ Author=jekovcar
 
 [DIALOG_10]
 0=DVD
-3=Премахни CSS (Система кодиране на съдържание)
+3=&Enable DVD support
 4=Премахни RC (Регионален код)
 5=Премахни RCE (Подобрен регионален код)
 6=Регионален код на диска:
 7=Премахни APS (Система аналогова защита)
 8=Премахни UOP (Забрани потребителски операции)
 9=Премахни ARccOS
+11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
 0=Blu-ray
-3=Премахни AACS (Advanced Access Content System)
+3=&Enable Blu-ray support
 4=Премахни BD+
 5=Премахни RC (регионален код)
 6=Регионален код на диска:
@@ -87,20 +89,29 @@ Author=jekovcar
 8=Активирай &LibreDrive за UHD
 
 [DIALOG_14]
-0=Извличане в имидж...
-1=Старт
-2=Спри
-3=&Изходно устройство:
-4=&Целеви файл:
-5=Запази защитата
-6=&Провери хеша на съдържанието
+1=Start
+3=Source
+4=Destination
+5=Options
+6=Info
+7=Type:
+8=Capacity:
+9=Protection:
+10=Free space:
+11=Capacity:
+12=&Keep protection
+13=&Verify content hash
+14=Create &md5 checksum file
+15=Create &dvdid.xml
 
 [DIALOG_15]
-0=Извличане на твърд диск...
-1=Старт
-2=Спри
-3=&Изходно устройство:
-4=&Целева директория:
+0=Xreveal
+3=Source:
+4=Destination:
+6=Time elapsed:
+7=Time remaining:
+8=Read errors:
+9=Read rate:
 
 [DIALOG_16]
 0=Регион за плейър
@@ -118,14 +129,16 @@ Author=jekovcar
 
 [DIALOG_19]
 0=Бързи клавиши
-3=Създаване на клавишни комбинации за бърз достъп до някои функции.
-4=Меню Xreveal:
-5=Настройки:
-6=Активирай Xreveal:
+3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
+4=Show Xreveal system tray menu:
+5=Show settings window:
+6=Enable/Disable Xreveal:
+7=Rip to ISO file:
+8=Rip to folder:
 
 [DIALOG_20]
 0=HD DVD
-3=Премахни AACS (Advanced Access Content System)
+3=&Enable HD DVD support
 4=Премахни първо възпроизв. заглавие
 5=Премахни UOPs (забрани потребителски операции)
 6=Премахни родителски ограничения
@@ -145,6 +158,10 @@ Author=jekovcar
 
 [DIALOG_24]
 0=Информация За Устройство
+3=Drive:
+4=Serial number:
+5=Vendor specific:
+6=Bus encryption capable:
 
 [DIALOG_25]
 0=Импорт...
@@ -154,6 +171,20 @@ Author=jekovcar
 
 [DIALOG_26]
 0=Съдържание Хеш Верификатор
+
+[DIALOG_27]
+0=Sounds
+3=Play sound after opening disc
+4=Play sound after ripping disc
+5=Success sound:
+6=Error sound:
+
+[DIALOG_28]
+0=Create Dump File
+3=Please wait...
+4=Adding %s...
+5=<a>How to submit dump files?</a>
+6=The file has been successfully created.
 
 [DIALOG_A]
 0=Актуализация софтуер
@@ -201,11 +232,11 @@ Author=jekovcar
 18=Xreveal няма да работи, ако %s работи.\n\nИскате ли да се затвори?
 19=Xreveal сканира устройство %C:
 20=Дискът, който поставихте, ще бъде наличен скоро, моля изчакайте!
-21=Xreveal не е активен за устройство %C:!
-22=Няма достатъчно свободно място на устройство %C:!
+21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
+22=Directory '%s' has not enough space!\nYou need an additional %s.
 23=Копиране на %s...
-24=%.1f MB/s, изминало време: %s, оставащо време: %s
-25=Процесът е завършен успешно!
+24=%.1f MB/s
+25=Operation successfully completed!
 26=Няма намерен ключ за дешифриране в {%s}
 27=Не е намерен BD+ FUT
 28=Xreveal неуспешно отваряне на диска, код на грешка: %s.
@@ -221,8 +252,8 @@ Author=jekovcar
 38=%C:
 39=%C:\[%S]
 40=&Състояние
-41=&Отвори
-42=&Създай лог файл
+41=&Open in Explorer
+42=&Create Dump File
 43=&Извади BD+ FUT
 44=Извличане на &твърд диск...
 45=Извличане в &имидж...
@@ -240,7 +271,7 @@ Author=jekovcar
 57=Използвате безплатната версия, <a>надстройте до Pro</a>, за да отключите допълнителни функции.
 58=%s вече съществува.\nИскате ли да го замените?
 59=Сигурни ли сте, че искате да отмените?
-60=Регион на Blu-ray плейър
+60=Your license expired on %s.
 61=Плейър
 62=Регион
 63=Остават промени
@@ -292,3 +323,28 @@ Author=jekovcar
 109=Версия на командния ред (Windows/macOS/Linux)
 110=Отказ
 111=Спецификация доставчик
+112=Directory %s doesn't exist. Do you want to create it?
+113=When done: 
+114=Do nothing
+115=, 
+116=Eject disc
+117=Play sound
+118=Quit Xreveal
+119=No action
+120=Shutdown
+121=Sleep
+122=Hibernate
+123=Lock system
+124=Log off
+125=All Files
+126=ISO Files
+127=WAV Files
+128=KeyDB Files
+129=Database Files
+130=Select or drop the WAV file here
+131=Select or drop the KeyDB.cfg here
+132=%u%% complete
+133=Error reading from drive %C:!\nSectors: %u-%u
+134=Error reading %s!\nSectors: %u-%u
+135=Abort request acknowledged
+136=Copying...
