--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -43,6 +43,7 @@ Author=
 7=自动检查更新(&C)
 8=<a>现在检查</a>
 9=自动上报打开失败信息以改进 Xreveal (&R)
+10=&Prevent the system from sleeping while ripping
 
 [DIALOG_9]
 0=音乐 CD
@@ -50,17 +51,18 @@ Author=
 
 [DIALOG_10]
 0=DVD
-3=移除 CSS
+3=&Enable DVD support
 4=移除 RC (区域码)
 5=移除 RCE
 6=光盘区域码:
 7=移除 APS
 8=移除 UOP (禁止用户操作)
 9=移除 ARccOS
+11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
 0=BD
-3=移除 AACS
+3=&Enable Blu-ray support
 4=移除 BD+
 5=移除 RC (区域码)
 6=光盘区域码:
@@ -87,20 +89,29 @@ Author=
 8=对于 UHD 启用 &LibreDrive
 
 [DIALOG_14]
-0=复制光盘镜像...
-1=开始(&S)
-2=取消
-3=源光驱(&S):
-4=目标文件(&D):
-5=保留保护
-6=验证内容哈希值
+1=Start
+3=Source
+4=Destination
+5=Options
+6=Info
+7=Type:
+8=Capacity:
+9=Protection:
+10=Free space:
+11=Capacity:
+12=&Keep protection
+13=&Verify content hash
+14=Create &md5 checksum file
+15=Create &dvdid.xml
 
 [DIALOG_15]
-0=拷贝光盘文件...
-1=开始
-2=取消
-3=源光驱(&S):
-4=目标文件夹(&D):
+0=Xreveal
+3=Source:
+4=Destination:
+6=Time elapsed:
+7=Time remaining:
+8=Read errors:
+9=Read rate:
 
 [DIALOG_16]
 0=播放器区域码
@@ -118,14 +129,16 @@ Author=
 
 [DIALOG_19]
 0=热键
-3=创建热键以快速访问 Xreveal 的一些功能。
-4=Xreveal 菜单:
-5=设置:
-6=启用 Xreveal:
+3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
+4=Show Xreveal system tray menu:
+5=Show settings window:
+6=Enable/Disable Xreveal:
+7=Rip to ISO file:
+8=Rip to folder:
 
 [DIALOG_20]
 0=HD DVD
-3=移除 AACS
+3=&Enable HD DVD support
 4=移除片头
 5=移除 UOP (用户操作禁止)
 6=移除家长限制
@@ -145,15 +158,33 @@ Author=
 
 [DIALOG_24]
 0=Drive Information
+3=Drive:
+4=Serial number:
+5=Vendor specific:
+6=Bus encryption capable:
 
 [DIALOG_25]
 0=Import...
 3=Source keydb.db:
 4=Select or drop source keydb.db here
-5=Destination keydb.db：
+5=Destination keydb.db:
 
 [DIALOG_26]
 0=Content Hash Verifier
+
+[DIALOG_27]
+0=Sounds
+3=Play sound after opening disc
+4=Play sound after ripping disc
+5=Success sound:
+6=Error sound:
+
+[DIALOG_28]
+0=Create Dump File
+3=Please wait...
+4=Adding %s...
+5=<a>How to submit dump files?</a>
+6=The file has been successfully created.
 
 [DIALOG_A]
 0=软件更新
@@ -201,11 +232,11 @@ Author=
 18=%s 将干扰 Xreveal 的正常工作！\n\n是否关闭它?
 19=Xreveal 正在扫描光驱 %C:
 20=你置入的光盘将很快可用。请稍候!
-21=光驱 %C: 没有启用 XReveal!
-22=硬盘 %C: 没有足够空间!
+21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
+22=Directory '%s' has not enough space!\nYou need an additional %s.
 23=拷贝 %s...
-24=%.1f MB/s, 用时: %s, 剩余时间: %s
-25=成功完成处理!
+24=%.1f MB/s
+25=Operation successfully completed!
 26=在{%s}中没找到解密此光碟的密钥
 27=没找到 BD+ FUT
 28=Xreveal 无法打开光碟, 错误码: %s.
@@ -221,8 +252,8 @@ Author=
 38=%C:
 39=%C:\[%S]
 40=状态(&S)
-41=打开(&O)
-42=生成 Log 文件(&C)
+41=&Open in Explorer
+42=&Create Dump File
 43=显示 BD+ 修复表(&S)
 44=复制到硬盘...
 45=复制到映像...
@@ -240,7 +271,7 @@ Author=
 57=你正在使用免费版本，升级到<a>Pro 版本</a>可解锁更多功能。
 58=%s 已存在。\n你想替换它吗?
 59=你确定要取消吗?
-60=蓝光播放器区码
+60=Your license expired on %s.
 61=播放器
 62=区码
 63=剩余次数
@@ -292,3 +323,28 @@ Author=
 109=Command line version (Windows/macOS/Linux)
 110=Abort
 111=Vendor specific
+112=Directory %s doesn't exist. Do you want to create it?
+113=When done: 
+114=Do nothing
+115=, 
+116=Eject disc
+117=Play sound
+118=Quit Xreveal
+119=No action
+120=Shutdown
+121=Sleep
+122=Hibernate
+123=Lock system
+124=Log off
+125=All Files
+126=ISO Files
+127=WAV Files
+128=KeyDB Files
+129=Database Files
+130=Select or drop the WAV file here
+131=Select or drop the KeyDB.cfg here
+132=%u%% complete
+133=Error reading from drive %C:!\nSectors: %u-%u
+134=Error reading %s!\nSectors: %u-%u
+135=Abort request acknowledged
+136=Copying...
