--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0409
 Name=English
-Version=2.6.7
+Version=2.6.9
 Author=
 1=OK
 2=Cancel
@@ -43,6 +43,7 @@ Author=
 7=&Check for updates automatically
 8=<a>Check now</a>
 9=Automatically &report open failures to improve Xreveal
+10=&Prevent the system from sleeping while ripping
 
 [DIALOG_9]
 0=CD
@@ -50,17 +51,18 @@ Author=
 
 [DIALOG_10]
 0=DVD
-3=Remove &CSS (Content Scramble System)
+3=&Enable DVD support
 4=Remove &RC (Region Code)
 5=Remove RC&E (Region Code Enhancement)
 6=&Disc region code:
 7=Remove &APS (Analog Protection System)
 8=Remove &UOPs (User Operation Prohibitions)
 9=Remove &ARccOS
+11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
 0=Blu-ray
-3=Remove &AACS (Advanced Access Content System)
+3=&Enable Blu-ray support
 4=Remove &BD+
 5=Remove &RC (Region Code)
 6=&Disc region code:
@@ -87,20 +89,29 @@ Author=
 8=Enable &LibreDrive for UHD
 
 [DIALOG_14]
-0=Rip to ISO file...
 1=Start
-2=Stop
-3=&Source drive:
-4=&Destination ISO file:
-5=&Keep protection (only remove bus encryption)
-6=&Verify content hash
+3=Source
+4=Destination
+5=Options
+6=Info
+7=Type:
+8=Capacity:
+9=Protection:
+10=Free space:
+11=Capacity:
+12=&Keep protection
+13=&Verify content hash
+14=Create &md5 checksum file
+15=Create &dvdid.xml
 
 [DIALOG_15]
-0=Rip to Folder...
-1=Start
-2=Stop
-3=&Source drive:
-4=&Destination directory:
+0=Xreveal
+3=Source:
+4=Destination:
+6=Time elapsed:
+7=Time remaining:
+8=Read errors:
+9=Read rate:
 
 [DIALOG_16]
 0=Players Region
@@ -118,14 +129,16 @@ Author=
 
 [DIALOG_19]
 0=Hotkeys
-3=Create hotkeys to quickly access some functions.
-4=Xreveal menu:
-5=Settings:
-6=Enable Xreveal:
+3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
+4=Show Xreveal system tray menu:
+5=Show settings window:
+6=Enable/Disable Xreveal:
+7=Rip to ISO file:
+8=Rip to folder:
 
 [DIALOG_20]
 0=HD DVD
-3=Remove &AACS (Advanced Access Content System)
+3=&Enable HD DVD support
 4=Remove &first play title
 5=Remove &UOPs (User Operation Prohibitions)
 6=Remove &parental restrictions
@@ -145,15 +158,33 @@ Author=
 
 [DIALOG_24]
 0=Drive Information
+3=Drive:
+4=Serial number:
+5=Vendor specific:
+6=Bus encryption capable:
 
 [DIALOG_25]
 0=Import...
 3=Source keydb.db:
 4=Select or drop source keydb.db here
-5=Destination keydb.db：
+5=Destination keydb.db:
 
 [DIALOG_26]
 0=Content Hash Verifier
+
+[DIALOG_27]
+0=Sounds
+3=Play sound after opening disc
+4=Play sound after ripping disc
+5=Success sound:
+6=Error sound:
+
+[DIALOG_28]
+0=Create Dump File
+3=Please wait...
+4=Adding %s...
+5=<a>How to submit dump files?</a>
+6=The file has been successfully created.
 
 [DIALOG_A]
 0=Software Update
@@ -201,11 +232,11 @@ Author=
 18=Xreveal will not work if %s is running.\n\nDo you want to close it?
 19=Xreveal is scanning drive %C:
 20=The disc you have inserted will be available shortly, please wait!
-21=Xreveal is not active for drive %C:!
-22=There isn't enough free space on drive %C:!
+21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
+22=Directory '%s' has not enough space!\nYou need an additional %s.
 23=Copying %s...
-24=%.1f MB/s, Time Elapsed: %s, Time Remaining: %s
-25=Process Completed Successfully!
+24=%.1f MB/s
+25=Operation successfully completed!
 26=The disc key not found in {%s}
 27=The BD+ FUT not found
 28=Xreveal failed to open disc, error code: %s.
@@ -221,8 +252,8 @@ Author=
 38=%C:
 39=%C:\[%S]
 40=&Status
-41=&Open
-42=&Create Log File
+41=&Open in Explorer
+42=&Create Dump File
 43=&Dump BD+ FUT
 44=Rip to &Folder...
 45=Rip to &ISO file...
@@ -240,7 +271,7 @@ Author=
 57=You are using the free version, <a>upgrade to Pro</a> to unlock extra features.
 58=%s already exists.\nDo you want to replace it?
 59=Are you sure you want to cancel?
-60=Blu-ray Players Region
+60=Your license expired on %s.
 61=Player
 62=Region
 63=Changes remaining
@@ -264,7 +295,7 @@ Author=
 81=Date added
 82=MKB
 83=Main playlist
-84=BDP date
+84=BD+ date
 85=
 86=VID
 87=MK
@@ -284,7 +315,7 @@ Author=
 101=Verify ISO
 102=Verify Folder
 103=Verify Drive
-104=Bus Encryption Capable
+104=Bus encryption capable
 105=%s (Drive: %s)
 106=Open Log Folder
 107=Options
@@ -292,3 +323,28 @@ Author=
 109=Command line version (Windows/macOS/Linux)
 110=Abort
 111=Vendor specific
+112=Directory %s doesn't exist. Do you want to create it?
+113=When done: 
+114=Do nothing
+115=, 
+116=Eject disc
+117=Play sound
+118=Quit Xreveal
+119=No action
+120=Shutdown
+121=Sleep
+122=Hibernate
+123=Lock system
+124=Log off
+125=All Files
+126=ISO Files
+127=WAV Files
+128=KeyDB Files
+129=Database Files
+130=Select or drop the WAV file here
+131=Select or drop the KeyDB.cfg here
+132=%u%% complete
+133=Error reading from drive %C:!\nSectors: %u-%u
+134=Error reading %s!\nSectors: %u-%u
+135=Abort request acknowledged
+136=Copying...
