--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -43,6 +43,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 7=&Periksa untuk pembaruan otomatis
 8=<a>Periksa sekarang</a>
 9=Automatically &report open failures to improve Xreveal
+10=&Prevent the system from sleeping while ripping
 
 [DIALOG_9]
 0=CD
@@ -50,17 +51,18 @@ Author= Lieba Natur Brilian (naturbrilian)
 
 [DIALOG_10]
 0=DVD
-3=Hapus &CSS (Content Scramble System)
+3=&Enable DVD support
 4=Hapus &RC (Region Code)
 5=Hapus RC&E (Region Code Enhancement)
 6=kode negara &Disk:
 7=Hapus &SPA (Sistem Proteksi Analog)
 8=Hapus &UOPs (User Operation Prohibitions)
 9=Hapus &ARccOS
+11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
 0=Blu-ray
-3=Hapus &AACS (Advanced Access Content System)
+3=&Enable Blu-ray support
 4=Hapus &BD+
 5=Hapus &RC (Region Code)
 6=&Kode region &Disk:
@@ -87,20 +89,29 @@ Author= Lieba Natur Brilian (naturbrilian)
 8=Aktifkan &LibreDrive untuk UHD
 
 [DIALOG_14]
-0=Rip ke berkas ISO...
-1=Mulai
-2=Berhenti
-3=&Sumber:
-4=&Target:
-5=&Tetap diproteksi (hanya hapus bus enkripsi)
-6=&Verifikasikan konten hash
+1=Start
+3=Source
+4=Destination
+5=Options
+6=Info
+7=Type:
+8=Capacity:
+9=Protection:
+10=Free space:
+11=Capacity:
+12=&Keep protection
+13=&Verify content hash
+14=Create &md5 checksum file
+15=Create &dvdid.xml
 
 [DIALOG_15]
-0=Rip ke Folder...
-1=Mulai
-2=Berhenti
-3=&Sumber drive:
-4=&Lokasi direktori:
+0=Xreveal
+3=Source:
+4=Destination:
+6=Time elapsed:
+7=Time remaining:
+8=Read errors:
+9=Read rate:
 
 [DIALOG_16]
 0=Region Pemutar
@@ -118,14 +129,16 @@ Author= Lieba Natur Brilian (naturbrilian)
 
 [DIALOG_19]
 0=Tombol Pintasan
-3=Buat tombol pintasan untuk mempercepat akses beberapa fungsi.
-4=Menu Xreveal:
-5=Pengaturan:
-6=Aktifkan Xreveal:
+3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
+4=Show Xreveal system tray menu:
+5=Show settings window:
+6=Enable/Disable Xreveal:
+7=Rip to ISO file:
+8=Rip to folder:
 
 [DIALOG_20]
 0=HD DVD
-3=Hapus &AACS (Advanced Access Content System)
+3=&Enable HD DVD support
 4=Hapus judul &pertama kali yang diputar
 5=Hapus &UOPs (User Operation Prohibitions)
 6=Hapus pembatasan &orang tua
@@ -145,15 +158,33 @@ Author= Lieba Natur Brilian (naturbrilian)
 
 [DIALOG_24]
 0=Drive Information
+3=Drive:
+4=Serial number:
+5=Vendor specific:
+6=Bus encryption capable:
 
 [DIALOG_25]
 0=Import...
 3=Source keydb.db:
 4=Select or drop source keydb.db here
-5=Destination keydb.db：
+5=Destination keydb.db:
 
 [DIALOG_26]
 0=Content Hash Verifier
+
+[DIALOG_27]
+0=Sounds
+3=Play sound after opening disc
+4=Play sound after ripping disc
+5=Success sound:
+6=Error sound:
+
+[DIALOG_28]
+0=Create Dump File
+3=Please wait...
+4=Adding %s...
+5=<a>How to submit dump files?</a>
+6=The file has been successfully created.
 
 [DIALOG_A]
 0=Pembaruan Perangkat Lunak
@@ -201,11 +232,11 @@ Author= Lieba Natur Brilian (naturbrilian)
 18=Xreveal will not work if %s is running.\n\nDo you want to close it?
 19=Xreveal memindai drive %C:
 20=Disk yang anda masukkan akan segera tersedia, silahkan tunggu!
-21=Xreveal tidak diaktifkan untuk drive %C:!
-22=Tidak ada ruangan yang cukup di drive %C:!
+21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
+22=Directory '%s' has not enough space!\nYou need an additional %s.
 23=Menyalin %s. . .
-24=%.1f MB/s, Time Elapsed: %s, Time Remaining: %s
-25=Proses Selesai Sukses!
+24=%.1f MB/s
+25=Operation successfully completed!
 26=Tidak ada key decrypt yang ditemukan di {%s}
 27=Tidak ada FUT BD+ yang ditemukan
 28=Xreveal gagal untuk membuka disk, kode kesalahan: %s
@@ -221,8 +252,8 @@ Author= Lieba Natur Brilian (naturbrilian)
 38=%C:
 39=%C:\[%S]
 40=&Status
-41=&Buka
-42=&Buat Berkas Log
+41=&Open in Explorer
+42=&Create Dump File
 43=&Dump BD+ FUT
 44=Rip ke &Folder...
 45=Rip ke berkas &ISO...
@@ -240,7 +271,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 57=Anda menggunakan versi gratis, <a>tingkatkan ke Pro</a> untuk membuka fitur ekstra.
 58=%s sudah ada.\nAnda ingin menimpanya?
 59=Apakah anda yakin ingin membatalkan?
-60=Negara Pemutar Blu-ray
+60=Your license expired on %s.
 61=Pemutar
 62=Negara
 63=Changes remaining
@@ -292,3 +323,28 @@ Author= Lieba Natur Brilian (naturbrilian)
 109=Command line version (Windows/macOS/Linux)
 110=Abort
 111=Vendor specific
+112=Directory %s doesn't exist. Do you want to create it?
+113=When done: 
+114=Do nothing
+115=, 
+116=Eject disc
+117=Play sound
+118=Quit Xreveal
+119=No action
+120=Shutdown
+121=Sleep
+122=Hibernate
+123=Lock system
+124=Log off
+125=All Files
+126=ISO Files
+127=WAV Files
+128=KeyDB Files
+129=Database Files
+130=Select or drop the WAV file here
+131=Select or drop the KeyDB.cfg here
+132=%u%% complete
+133=Error reading from drive %C:!\nSectors: %u-%u
+134=Error reading %s!\nSectors: %u-%u
+135=Abort request acknowledged
+136=Copying...
