--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -43,6 +43,7 @@ Author=bovirus (bovirus@gmail.com)
 7=&Controlla automaticamente aggiornamenti
 8=<a>Controlla ora</a>
 9=Segnala automaticamente e&rrori per migliorare Xreveal
+10=&Prevent the system from sleeping while ripping
 
 [DIALOG_9]
 0=CD
@@ -50,17 +51,18 @@ Author=bovirus (bovirus@gmail.com)
 
 [DIALOG_10]
 0=DVD
-3=Rimuovi &CSS (sistema codifica contenuti)
+3=&Enable DVD support
 4=Rimuovi &RC (codice regionale)
 5=Rimuovi RC&E (miglioramento codice regionale)
 6=Codice regione &disco:
 7=Rimuovi &APS (sistema protezione analogico)
 8=Rimuovi &UOP (proibizioni operazioni utente)
 9=Rimuovi &ARccOS
+11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
 0=Blu-ray
-3=Rimuovi &AACS (Advanced Access Content System)
+3=&Enable Blu-ray support
 4=Rimuovi &BD+
 5=Rimuovi &RC (codice regionale)
 6=Codice regione &disco:
@@ -87,20 +89,29 @@ Author=bovirus (bovirus@gmail.com)
 8=Abilita &LibreDrive per UHD
 
 [DIALOG_14]
-0=Crea un file immagine ISO...
-1=Avvia
-2=Stop
-3=&Sorgente:
-4=&Destinazione:
-5=Mantieni protezione (rimuovi solo criptazione bus)
-6=&Verifica hash contenuto
+1=Start
+3=Source
+4=Destination
+5=Options
+6=Info
+7=Type:
+8=Capacity:
+9=Protection:
+10=Free space:
+11=Capacity:
+12=&Keep protection
+13=&Verify content hash
+14=Create &md5 checksum file
+15=Create &dvdid.xml
 
 [DIALOG_15]
-0=Crea immagine su disco fisso...
-1=Avvia
-2=Stop
-3=Unità &sorgente:
-4=Cartella &destinazione:
+0=Xreveal
+3=Source:
+4=Destination:
+6=Time elapsed:
+7=Time remaining:
+8=Read errors:
+9=Read rate:
 
 [DIALOG_16]
 0=Regione riproduttore
@@ -118,14 +129,16 @@ Author=bovirus (bovirus@gmail.com)
 
 [DIALOG_19]
 0=Tasti scelta rapida
-3=Crea tasti scelta rapida per accedere rapidamente ad alcune funzioni di Xreveal.
-4=Menu Xreveal:
-5=Impostazioni:
-6=Abilita Xreveal:
+3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
+4=Show Xreveal system tray menu:
+5=Show settings window:
+6=Enable/Disable Xreveal:
+7=Rip to ISO file:
+8=Rip to folder:
 
 [DIALOG_20]
 0=HD DVD
-3=Rimuovi &AACS (Advanced Access Content System)
+3=&Enable HD DVD support
 4=Rimuovi &primo titolo riprodotto
 5=Rimuovi &UOPs (User Operation Prohibitions)
 6=Rimuovi restrizioni &genitori
@@ -145,15 +158,33 @@ Author=bovirus (bovirus@gmail.com)
 
 [DIALOG_24]
 0=Drive Information
+3=Drive:
+4=Serial number:
+5=Vendor specific:
+6=Bus encryption capable:
 
 [DIALOG_25]
 0=Import...
 3=Source keydb.db:
 4=Select or drop source keydb.db here
-5=Destination keydb.db：
+5=Destination keydb.db:
 
 [DIALOG_26]
 0=Content Hash Verifier
+
+[DIALOG_27]
+0=Sounds
+3=Play sound after opening disc
+4=Play sound after ripping disc
+5=Success sound:
+6=Error sound:
+
+[DIALOG_28]
+0=Create Dump File
+3=Please wait...
+4=Adding %s...
+5=<a>How to submit dump files?</a>
+6=The file has been successfully created.
 
 [DIALOG_A]
 0=Aggiornamento programma
@@ -201,11 +232,11 @@ Author=bovirus (bovirus@gmail.com)
 18=Xreveal non funzionerà se %s è in esecuzione.\n\nVuoi chiudere %s?
 19=Xreveal sta eseguendo la scansione dell'unità %C:
 20=Il disco che hai inserito sarà disponibile a breve, attendi!
-21=Xreveal non è attivo per l'unità %C:!
-22=Spazio libero insufficiente nell'unità %C:!
+21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
+22=Directory '%s' has not enough space!\nYou need an additional %s.
 23=Copia di %s...
-24=%.1f MB/s, Tempo trascorso: %s, tempo rimasto: %s
-25=Processo completato correttamente!
+24=%.1f MB/s
+25=Operation successfully completed!
 26=La chiave del disco non è stata trovata in {%s}
 27=BD+ FUT non trovata
 28=Xreveal non è riuscito ad aprire il disco, codice errore: %s.
@@ -221,8 +252,8 @@ Author=bovirus (bovirus@gmail.com)
 38=%C:
 39=%C:\[%S]
 40=&Stato
-41=&Apri
-42=&Crea file registro
+41=&Open in Explorer
+42=&Create Dump File
 43=&Visualizza tabella correzione BD+
 44=Crea immagine nel &disco fisso...
 45=Crea file i&mmagine ISO...
@@ -240,7 +271,7 @@ Author=bovirus (bovirus@gmail.com)
 57=Stai usando la versione gratuita, <a>aggiorna alla versione Pro</a> per sbloccare funzionalità aggiuntive.
 58=Il file [%s] esiste già.\nVuoi sostituire il file esistente?
 59=Sei sicuro di voler annullare l'operazione?
-60=Regione riproduttore Blu-ray
+60=Your license expired on %s.
 61=Riproduttore
 62=Codice regionale
 63=Cambiamenti disponibili
@@ -292,3 +323,28 @@ Author=bovirus (bovirus@gmail.com)
 109=Command line version (Windows/macOS/Linux)
 110=Abort
 111=Vendor specific
+112=Directory %s doesn't exist. Do you want to create it?
+113=When done: 
+114=Do nothing
+115=, 
+116=Eject disc
+117=Play sound
+118=Quit Xreveal
+119=No action
+120=Shutdown
+121=Sleep
+122=Hibernate
+123=Lock system
+124=Log off
+125=All Files
+126=ISO Files
+127=WAV Files
+128=KeyDB Files
+129=Database Files
+130=Select or drop the WAV file here
+131=Select or drop the KeyDB.cfg here
+132=%u%% complete
+133=Error reading from drive %C:!\nSectors: %u-%u
+134=Error reading %s!\nSectors: %u-%u
+135=Abort request acknowledged
+136=Copying...
