--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -43,6 +43,7 @@ Author=VenusGirl (비너스걸)
 7=자동으로 업데이트 확인(&C)
 8=<a>지금 확인</a>
 9=열기 실패를 자동으로 보고하여 Xreveal 개선
+10=&Prevent the system from sleeping while ripping
 
 [DIALOG_9]
 0=CD
@@ -50,17 +51,18 @@ Author=VenusGirl (비너스걸)
 
 [DIALOG_10]
 0=DVD
-3=DVD 지원 사용
+3=&Enable DVD support
 4=소프트웨어 지역 코드 제거
 5=지역 코드 향상 보호 제거
 6=디스크 영역:
 7=아날로그 보호 시스템 제거
 8=금지된 사용자 작업 제거
 9=ARccOS 제거
+11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
 0=Blu-ray
-3=Blu-ray 지원 사용
+3=&Enable Blu-ray support
 4=BD+ 보호 제거
 5=Blu-ray 지역 코드 제거
 6=디스크 지역:
@@ -87,20 +89,29 @@ Author=VenusGirl (비너스걸)
 8=UHD용 LibreDrive 사용(&L)
 
 [DIALOG_14]
-0=이미지로 추출...
-1=시작
-2=중지
-3=소스 드라이브(&S):
-4=대상 파일(&D):
-5=보호 유지 (Blu-ray)
-6=내용 해시 확인(&V)
+1=Start
+3=Source
+4=Destination
+5=Options
+6=Info
+7=Type:
+8=Capacity:
+9=Protection:
+10=Free space:
+11=Capacity:
+12=&Keep protection
+13=&Verify content hash
+14=Create &md5 checksum file
+15=Create &dvdid.xml
 
 [DIALOG_15]
-0=하드 디스크로 추출...
-1=시작
-2=중지
-3=원본 드라이브(&S):
-4=대상 디렉터리(&D):
+0=Xreveal
+3=Source:
+4=Destination:
+6=Time elapsed:
+7=Time remaining:
+8=Read errors:
+9=Read rate:
 
 [DIALOG_16]
 0=재생 지역
@@ -118,14 +129,16 @@ Author=VenusGirl (비너스걸)
 
 [DIALOG_19]
 0=단축키
-3=일부 기능에 빠르게 액세스할 수 있는 단축키를 만듭니다.
-4=Xreveal 메뉴:
-5=설정:
-6=Xreveal 사용:
+3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
+4=Show Xreveal system tray menu:
+5=Show settings window:
+6=Enable/Disable Xreveal:
+7=Rip to ISO file:
+8=Rip to folder:
 
 [DIALOG_20]
 0=HD DVD
-3=AACS (고급 액세스 콘텐츠 시스템) 제거
+3=&Enable HD DVD support
 4=첫 번째 재생 제목 제거
 5=UOP 제거 (사용자 조작 금지)
 6=부모 제한 제거
@@ -145,6 +158,10 @@ Author=VenusGirl (비너스걸)
 
 [DIALOG_24]
 0=드라이브 정보
+3=Drive:
+4=Serial number:
+5=Vendor specific:
+6=Bus encryption capable:
 
 [DIALOG_25]
 0=가져오기...
@@ -154,6 +171,20 @@ Author=VenusGirl (비너스걸)
 
 [DIALOG_26]
 0=콘텐츠 해시 확인자
+
+[DIALOG_27]
+0=Sounds
+3=Play sound after opening disc
+4=Play sound after ripping disc
+5=Success sound:
+6=Error sound:
+
+[DIALOG_28]
+0=Create Dump File
+3=Please wait...
+4=Adding %s...
+5=<a>How to submit dump files?</a>
+6=The file has been successfully created.
 
 [DIALOG_A]
 0=소프트웨어 업데이트
@@ -201,11 +232,11 @@ Author=VenusGirl (비너스걸)
 18=%s이(가) 실행 중인 경우 Xreveal이 작동하지 않습니다.\n\n닫으시겠습니까?
 19=Xreveal 드라이브 %C를 검색 중:
 20=삽입한 디스크를 곧 사용할 수 있습니다. 잠시 기다려 주십시오!
-21=%C: 드라이브에 Xreveal이 활성화되지 되지 않았습니다!
-22=%C: 드라이브에 사용 가능한 공간이 부족합니다!
+21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
+22=Directory '%s' has not enough space!\nYou need an additional %s.
 23=복사 중 %s...
-24=%.1f MB/s, 경과된 시간: %s, 남은 시간: %s
-25=프로세스가 성공적으로 완료되었습니다!
+24=%.1f MB/s
+25=Operation successfully completed!
 26={%s}에 암호 해독 키가 없습니다
 27=BD+ FUT를 찾을 수 없습니다
 28=Xreveal에서 디스크를 열지 못했습니다(오류 코드): %s.
@@ -221,8 +252,8 @@ Author=VenusGirl (비너스걸)
 38=%C:
 39=%C:\[%S]
 40=상태(&S)
-41=열기(&O)
-42=로그 파일 생성(&C)
+41=&Open in Explorer
+42=&Create Dump File
 43=BD+ 수정 테이블 표시(&S)
 44=하드 디스크에 복사(&H)...
 45=이미지로 복사(&I)...
@@ -240,7 +271,7 @@ Author=VenusGirl (비너스걸)
 57=이 프로그램은 프리웨어입니다.\n\n이 프로그램이 유용하다면 <a>기부</a>를 통해 개선할 수 있습니다.
 58=[%s] 파일이 이미 존재합니다. 기존 파일을 대체하시겠습니까?
 59=취소하시겠습니까?
-60=Blu-ray 재생 지역
+60=Your license expired on %s.
 61=재생
 62=지역 코드
 63=남은 변경 사항
@@ -292,3 +323,28 @@ Author=VenusGirl (비너스걸)
 109=명령줄 버전 (Windows/macOS/Linux)
 110=정보
 111=공급업체별
+112=Directory %s doesn't exist. Do you want to create it?
+113=When done: 
+114=Do nothing
+115=, 
+116=Eject disc
+117=Play sound
+118=Quit Xreveal
+119=No action
+120=Shutdown
+121=Sleep
+122=Hibernate
+123=Lock system
+124=Log off
+125=All Files
+126=ISO Files
+127=WAV Files
+128=KeyDB Files
+129=Database Files
+130=Select or drop the WAV file here
+131=Select or drop the KeyDB.cfg here
+132=%u%% complete
+133=Error reading from drive %C:!\nSectors: %u-%u
+134=Error reading %s!\nSectors: %u-%u
+135=Abort request acknowledged
+136=Copying...
