--- a/Xreveal_PLK.ini
+++ b/Xreveal_PLK.ini
@@ -43,6 +43,7 @@ Author=Fresta
 7=&Sprawdzaj aktualizacje automatycznie
 8=<a>Check now</a>
 9=Automatically &report open failures to improve Xreveal
+10=&Prevent the system from sleeping while ripping
 
 [DIALOG_9]
 0=CD
@@ -50,17 +51,18 @@ Author=Fresta
 
 [DIALOG_10]
 0=DVD
-3=Usuń CSS (Content Scramble System)
+3=&Enable DVD support
 4=Usuń RC (Kod regionu)
 5=Usuń RCE (Region Code Enhancement)
 6=Kod regionu dysku:
 7=Usuń APS (Analog Protection System)
 8=Usuń UOPs (User Operation Prohibitions)
 9=Usuń ARccOS
+11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
 0=Blu-ray
-3=Usuń AACS (Advanced Access Content System)
+3=&Enable Blu-ray support
 4=Usuń BD+
 5=Usuń RC (Region Code)
 6=Kod regionu płyty:
@@ -87,20 +89,29 @@ Author=Fresta
 8=Włącz &LibreDrive dla UHD
 
 [DIALOG_14]
-0=Zgrywanie do Obrazu...
 1=Start
-2=Stop
-3=&Napęd źródłowy:
-4=&Plik docelowy:
-5=Zachowaj Ochronę
-6=&Verify content hash
+3=Source
+4=Destination
+5=Options
+6=Info
+7=Type:
+8=Capacity:
+9=Protection:
+10=Free space:
+11=Capacity:
+12=&Keep protection
+13=&Verify content hash
+14=Create &md5 checksum file
+15=Create &dvdid.xml
 
 [DIALOG_15]
-0=Zgrywanie na Dysk Twardy...
-1=Start
-2=Stop
-3=&Napęd źródłowy:
-4=&Katalog docelowy:
+0=Xreveal
+3=Source:
+4=Destination:
+6=Time elapsed:
+7=Time remaining:
+8=Read errors:
+9=Read rate:
 
 [DIALOG_16]
 0=Region odtwarzacza
@@ -118,14 +129,16 @@ Author=Fresta
 
 [DIALOG_19]
 0=Hotkeys
-3=Utwórz skróty klawiszowe, aby szybko uzyskać dostęp do niektórych funkcji.
-4=Menu Xreveal:
-5=Ustawienia:
-6=Włącz Xreveal:
+3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
+4=Show Xreveal system tray menu:
+5=Show settings window:
+6=Enable/Disable Xreveal:
+7=Rip to ISO file:
+8=Rip to folder:
 
 [DIALOG_20]
 0=HD DVD
-3=Usuń AACS (Advanced Access Content System)
+3=&Enable HD DVD support
 4=Usuń tytuł pierwszego odtwarzania
 5=Usuń UOPs (User Operation Prohibitions)
 6=Usuń ograniczenia rodzicielskie
@@ -145,15 +158,33 @@ Author=Fresta
 
 [DIALOG_24]
 0=Drive Information
+3=Drive:
+4=Serial number:
+5=Vendor specific:
+6=Bus encryption capable:
 
 [DIALOG_25]
 0=Import...
 3=Source keydb.db:
 4=Select or drop source keydb.db here
-5=Destination keydb.db：
+5=Destination keydb.db:
 
 [DIALOG_26]
 0=Content Hash Verifier
+
+[DIALOG_27]
+0=Sounds
+3=Play sound after opening disc
+4=Play sound after ripping disc
+5=Success sound:
+6=Error sound:
+
+[DIALOG_28]
+0=Create Dump File
+3=Please wait...
+4=Adding %s...
+5=<a>How to submit dump files?</a>
+6=The file has been successfully created.
 
 [DIALOG_A]
 0=Aktualizacja
@@ -201,11 +232,11 @@ Author=Fresta
 18=Xreveal nie będzie działał, jeśli %s jest uruchomiony.\n\nChcesz go zamknąć?
 19=Xreveal skanuje napęd %C:
 20=Włożony dysk będzie wkrótce dostępny, proszę czekać!
-21=Xreveal nie jest aktywny dla napędu %C:!
-22=Na dysku jest za mało wolnego miejsca %C:!
+21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
+22=Directory '%s' has not enough space!\nYou need an additional %s.
 23=Kopiowanie %s...
-24=%.1f MB/s, Czas upływający: %s, Pozostały czas: %s
-25=Proces zakończony sukcesem!
+24=%.1f MB/s
+25=Operation successfully completed!
 26=Xreveal nie mógł znaleźć klucza deszyfrującego w KeyDB.cfg
 27=Xreveal nie mógł otworzyć pliku BD+ fixup table (FUT)
 28=Xreveal failed to open disc, error code: %s.
@@ -221,8 +252,8 @@ Author=Fresta
 38=%C:
 39=%C:\[%S]
 40=&Status
-41=&Otwórz
-42=&Utwórz plik dziennika
+41=&Open in Explorer
+42=&Create Dump File
 43=&Dump BD+ FUT
 44=Zgraj na &Dysk Twardy...
 45=Zgraj do &Obrazu...
@@ -240,7 +271,7 @@ Author=Fresta
 57=Ten program jest darmowy.\n\nJeśli ten program jest dla Ciebie przydatny, możesz przekazać <a>darowiznę</a>, aby pomóc nam go ulepszyć.
 58=%s już istnieje.\nCzy chcesz to zastąpić?
 59=Czy na pewno chcesz anulować?
-60=Region Odtwarzacza Blu-Ray
+60=Your license expired on %s.
 61=Odtwarzacz
 62=Region
 63=Zmian pozostało
@@ -264,7 +295,7 @@ Author=Fresta
 81=Date added
 82=MKB
 83=Main playlist
-84=BDP date
+84=BD+ date
 85=
 86=VID
 87=MK
@@ -292,3 +323,28 @@ Author=Fresta
 109=Command line version (Windows/macOS/Linux)
 110=Abort
 111=Vendor specific
+112=Directory %s doesn't exist. Do you want to create it?
+113=When done: 
+114=Do nothing
+115=, 
+116=Eject disc
+117=Play sound
+118=Quit Xreveal
+119=No action
+120=Shutdown
+121=Sleep
+122=Hibernate
+123=Lock system
+124=Log off
+125=All Files
+126=ISO Files
+127=WAV Files
+128=KeyDB Files
+129=Database Files
+130=Select or drop the WAV file here
+131=Select or drop the KeyDB.cfg here
+132=%u%% complete
+133=Error reading from drive %C:!\nSectors: %u-%u
+134=Error reading %s!\nSectors: %u-%u
+135=Abort request acknowledged
+136=Copying...
