--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -43,6 +43,7 @@ Author=jekovcar
 7=&Автоматически проверять наличие обновлений
 8=<a>Проверить сейчас</a>
 9=Автоматически &сообщать об открытых сбоях для улучшения Xreveal
+10=&Prevent the system from sleeping while ripping
 
 [DIALOG_9]
 0=CD
@@ -50,17 +51,18 @@ Author=jekovcar
 
 [DIALOG_10]
 0=DVD
-3=Удалить &CSS (систему шифрования контента)
+3=&Enable DVD support
 4=Удалить &RC (код региона)
 5=Удаление RC&E (улучшение кода региона)
 6=&Код региона диска:
 7=Удалить &APS (аналоговую систему защиты)
 8=Удалить &UOPs (запреты на действия пользователя)
 9=Удалить &ARccOS
+11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
 0=Blu-ray
-3=Удалить &AACS (систему контента с расширенным доступом)
+3=&Enable Blu-ray support
 4=Удалить &BD+
 5=Удалить &RC (код региона)
 6=&Код региона диска:
@@ -87,20 +89,29 @@ Author=jekovcar
 8=Включить &LibreDrive для UHD
 
 [DIALOG_14]
-0=Копировать в файл ISO...
-1=Начать
-2=Остановить
-3=&Источник:
-4=&Цель:
-5=&Сохранить защиту (удалить только шифрование)
-6=&Проверить хеш контента
+1=Start
+3=Source
+4=Destination
+5=Options
+6=Info
+7=Type:
+8=Capacity:
+9=Protection:
+10=Free space:
+11=Capacity:
+12=&Keep protection
+13=&Verify content hash
+14=Create &md5 checksum file
+15=Create &dvdid.xml
 
 [DIALOG_15]
-0=Копировать в папку...
-1=Начать
-2=Остановить
-3=&Исходный диск:
-4=&Каталог назначения:
+0=Xreveal
+3=Source:
+4=Destination:
+6=Time elapsed:
+7=Time remaining:
+8=Read errors:
+9=Read rate:
 
 [DIALOG_16]
 0=Регион плеера
@@ -118,14 +129,16 @@ Author=jekovcar
 
 [DIALOG_19]
 0=Горячие клавиши
-3=Создать горячие клавиши для быстрого доступа к некоторым функциям.
-4=Xreveal меню:
-5=Настройки:
-6=Включить Xreveal:
+3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
+4=Show Xreveal system tray menu:
+5=Show settings window:
+6=Enable/Disable Xreveal:
+7=Rip to ISO file:
+8=Rip to folder:
 
 [DIALOG_20]
 0=HD DVD
-3=Удалить &AACS (систему контента с расширенным доступом)
+3=&Enable HD DVD support
 4=Удалить &оглавление
 5=Удалить &UOPs (запреты на действия пользователя)
 6=Удалить &родительские ограничения
@@ -145,6 +158,10 @@ Author=jekovcar
 
 [DIALOG_24]
 0=Информация о приводе
+3=Drive:
+4=Serial number:
+5=Vendor specific:
+6=Bus encryption capable:
 
 [DIALOG_25]
 0=Импорт...
@@ -154,6 +171,20 @@ Author=jekovcar
 
 [DIALOG_26]
 0=Проверка хэша содержимого
+
+[DIALOG_27]
+0=Sounds
+3=Play sound after opening disc
+4=Play sound after ripping disc
+5=Success sound:
+6=Error sound:
+
+[DIALOG_28]
+0=Create Dump File
+3=Please wait...
+4=Adding %s...
+5=<a>How to submit dump files?</a>
+6=The file has been successfully created.
 
 [DIALOG_A]
 0=Обновление программы
@@ -201,11 +232,11 @@ Author=jekovcar
 18=Xreveal не будет работать, если %s запущен.\n\nВы хотите закрыть его?
 19=Xreveal сканирует диск %C:
 20=Вставленный вами диск скоро будет доступен, подождите.!
-21=Xreveal не активен для диска %C!
-22=Недостаточно свободного места на диске %C!
+21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
+22=Directory '%s' has not enough space!\nYou need an additional %s.
 23=Копирование %s...
-24=%.1f МБ/с, Прошедшее время: %s, Оставшееся время: %s
-25=Процесс успешно завершен!
+24=%.1f МБ/с
+25=Operation successfully completed!
 26=В {%s} не найден ключ дешифрования
 27=BD+ FUT не найден
 28=Xreveal не удалось открыть диск, код ошибки: %s.
@@ -221,8 +252,8 @@ Author=jekovcar
 38=%С:
 39=%C:\[%S]
 40=&Состояние
-41=&Открыть
-42=&Создать файл журнала
+41=&Open in Explorer
+42=&Create Dump File
 43=&Сбросить BD+ FUT
 44=Копировать в &папку...
 45=Копировать в файл &ISO...
@@ -240,7 +271,7 @@ Author=jekovcar
 57=Вы используете бесплатную версию. <a>Обновите ее до Pro</a> , чтобы разблокировать дополнительные функции.
 58=%s уже существует.\nХотите заменить его?
 59=Действительно хотите отменить?
-60=Регион плеера Blu-ray
+60=Your license expired on %s.
 61=Плеер
 62=Регион
 63=Оставшиеся изменения
@@ -292,3 +323,28 @@ Author=jekovcar
 109=Версия командной строки (Windows/macOS/Linux)
 110=Прервать
 111=Спецификация поставщика
+112=Directory %s doesn't exist. Do you want to create it?
+113=When done: 
+114=Do nothing
+115=, 
+116=Eject disc
+117=Play sound
+118=Quit Xreveal
+119=No action
+120=Shutdown
+121=Sleep
+122=Hibernate
+123=Lock system
+124=Log off
+125=All Files
+126=ISO Files
+127=WAV Files
+128=KeyDB Files
+129=Database Files
+130=Select or drop the WAV file here
+131=Select or drop the KeyDB.cfg here
+132=%u%% complete
+133=Error reading from drive %C:!\nSectors: %u-%u
+134=Error reading %s!\nSectors: %u-%u
+135=Abort request acknowledged
+136=Copying...
