--- a/Xreveal_SLV.ini
+++ b/Xreveal_SLV.ini
@@ -43,6 +43,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 7=Samodejno preveri obstoj posodobitev
 8=<a>Check now</a>
 9=Automatically &report open failures to improve Xreveal
+10=&Prevent the system from sleeping while ripping
 
 [DIALOG_9]
 0=Pogon CD
@@ -50,17 +51,18 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 
 [DIALOG_10]
 0=Pogon DVD
-3=Omogoči podporo za DVD
+3=&Enable DVD support
 4=Odstrani regijsko kodo programa
 5=Odstrani zaščito izboljšave regionalne kode
 6=Območje zgoščenke:
 7=Odstrani analogni zaščitni sistem
 8=Odstrani prepovedane uporabniške operacije
 9=Odstrani ARccOS
+11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
 0=Pogon Blu-ray
-3=Odstrani AACS (Napredni sistem za dostop do vsebine)
+3=&Enable Blu-ray support
 4=Odstrani BD+
 5=Odstrani RK (regionalno kodo)
 6=Regionalna koda zgoščenke:
@@ -87,20 +89,29 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 8=Omogoči &LibreDrive za UHD
 
 [DIALOG_14]
-0=Kopiraj v sliko...
-1=Začni
-2=Ustavi
-3=Iz&vorni pogon:
-4=&Ciljna datoteka:
-5=Ohrani zaščito (Blu-ray)
-6=&Verify content hash
+1=Start
+3=Source
+4=Destination
+5=Options
+6=Info
+7=Type:
+8=Capacity:
+9=Protection:
+10=Free space:
+11=Capacity:
+12=&Keep protection
+13=&Verify content hash
+14=Create &md5 checksum file
+15=Create &dvdid.xml
 
 [DIALOG_15]
-0=Kopiraj na trdi disk...
-1=čni
-2=Ustavi
-3=Iz&vorni pogon:
-4=Ciljna &mapa:
+0=Xreveal
+3=Source:
+4=Destination:
+6=Time elapsed:
+7=Time remaining:
+8=Read errors:
+9=Read rate:
 
 [DIALOG_16]
 0=Regija igralcev
@@ -118,14 +129,16 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 
 [DIALOG_19]
 0=Vroče tipke
-3=Ustvari vroče tipke za hiter dostop do nekaterih funkcij.
-4=Meni Xreveala:
-5=Nastavitve:
-6=Omogoči:
+3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
+4=Show Xreveal system tray menu:
+5=Show settings window:
+6=Enable/Disable Xreveal:
+7=Rip to ISO file:
+8=Rip to folder:
 
 [DIALOG_20]
 0=HD DVD
-3=Odstrani AACS (Vsebinski sistem naprednega dostopa).
+3=&Enable HD DVD support
 4=Odstrani prvi naslov predvajanja
 5=Odstrani UOP-je (prepovedi uporabniških operacij)
 6=Odstrani nadrejene omejitve
@@ -145,15 +158,33 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 
 [DIALOG_24]
 0=Drive Information
+3=Drive:
+4=Serial number:
+5=Vendor specific:
+6=Bus encryption capable:
 
 [DIALOG_25]
 0=Import...
 3=Source keydb.db:
 4=Select or drop source keydb.db here
-5=Destination keydb.db：
+5=Destination keydb.db:
 
 [DIALOG_26]
 0=Content Hash Verifier
+
+[DIALOG_27]
+0=Sounds
+3=Play sound after opening disc
+4=Play sound after ripping disc
+5=Success sound:
+6=Error sound:
+
+[DIALOG_28]
+0=Create Dump File
+3=Please wait...
+4=Adding %s...
+5=<a>How to submit dump files?</a>
+6=The file has been successfully created.
 
 [DIALOG_A]
 0=Posodobitev programa
@@ -201,11 +232,11 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 18=Xreveal ne bo deloval, če se izvaja %s.\n\nAli ga zdaj želite zapreti?
 19=Xreveal pregleduje pogon %C:
 20=Zgoščenka, ki ste jo vstavili, bo kmalu na voljo. Prosimo, počakajte!
-21=Xreveal ni aktiven za pogon %C:!
-22=Na pogonu %C: ni dovolj prostega prostora!
+21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
+22=Directory '%s' has not enough space!\nYou need an additional %s.
 23=Kopiranje %s...
-24=%.1f MB/s, potekel čas: %s, preostali čas: %s
-25=Proces je bil uspešno končan!
+24=%.1f MB/s
+25=Operation successfully completed!
 26=V {%s} ni bilo mogoče najti ključa za dešifriranje
 27=BD+ FUT ni bil najden
 28=Xreveal failed to open disc, error code: %s.
@@ -221,8 +252,8 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 38=%C:
 39=%C:\[%S]
 40=S&tanje
-41=&Odpri
-42=Ustvari datoteko dnevnika
+41=&Open in Explorer
+42=&Create Dump File
 43=Prikaži tabelo popravkov BD+
 44=Kopiraj na trdi disk...
 45=Kopiraj v sliko ...
@@ -240,7 +271,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 57=Ta program je brezplačen.\n\nČe vam je ta program koristen, lahko prispevate <a>obdaritev</a> in nam ga pomagate izboljšati.
 58=%s že obstaja.\nAli ga želite zamenjati?
 59=Ali ste prepričani, da želite preklicati?
-60=Regija igralcev Blu-ray
+60=Your license expired on %s.
 61=Predvajalnik
 62=Regija
 63=Preostale spremembe
@@ -264,7 +295,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 81=Date added
 82=MKB
 83=Main playlist
-84=BDP date
+84=BD+ date
 85=
 86=VID
 87=MK
@@ -292,3 +323,28 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 109=Command line version (Windows/macOS/Linux)
 110=Abort
 111=Vendor specific
+112=Directory %s doesn't exist. Do you want to create it?
+113=When done: 
+114=Do nothing
+115=, 
+116=Eject disc
+117=Play sound
+118=Quit Xreveal
+119=No action
+120=Shutdown
+121=Sleep
+122=Hibernate
+123=Lock system
+124=Log off
+125=All Files
+126=ISO Files
+127=WAV Files
+128=KeyDB Files
+129=Database Files
+130=Select or drop the WAV file here
+131=Select or drop the KeyDB.cfg here
+132=%u%% complete
+133=Error reading from drive %C:!\nSectors: %u-%u
+134=Error reading %s!\nSectors: %u-%u
+135=Abort request acknowledged
+136=Copying...
