--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -43,6 +43,7 @@ Author=Steven Rogers
 7=&Comprobar actualizaciones automaticamente
 8=<a>Check now</a>
 9=Automatically &report open failures to improve Xreveal
+10=&Prevent the system from sleeping while ripping
 
 [DIALOG_9]
 0=CD
@@ -50,17 +51,18 @@ Author=Steven Rogers
 
 [DIALOG_10]
 0=DVD
-3=Habilitar compatibilidad con DVD
+3=&Enable DVD support
 4=Eliminar el código de región del software
 5=Eliminar la protección de mejora de código de región
 6=Región del disco:
 7=Quitar el sistema de protección analógico
 8=Eliminar operaciones de usuario prohibidas
 9=Eliminar ARccOS
+11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
 0=Blu-ray
-3=Habilitar compatibilidad con Blu-ray
+3=&Enable Blu-ray support
 4=Quitar protección BD+
 5=Eliminar el código de región de Blu-ray
 6=Región del disco:
@@ -87,20 +89,29 @@ Author=Steven Rogers
 8=Habilitar &LibreDrive para UHD
 
 [DIALOG_14]
-0=Copiar a imagen...
-1=Iniciar
-2=Detener
-3=&Unidad de origen:
-4=&Archivo de destino:
-5=Mantener protección (Blu-ray)
-6=&Verify content hash
+1=Start
+3=Source
+4=Destination
+5=Options
+6=Info
+7=Type:
+8=Capacity:
+9=Protection:
+10=Free space:
+11=Capacity:
+12=&Keep protection
+13=&Verify content hash
+14=Create &md5 checksum file
+15=Create &dvdid.xml
 
 [DIALOG_15]
-0=Copiar a disco duro...
-1=Iniciar
-2=Detener
-3=&Unidad de origen:
-4=&Archivo de destino:
+0=Xreveal
+3=Source:
+4=Destination:
+6=Time elapsed:
+7=Time remaining:
+8=Read errors:
+9=Read rate:
 
 [DIALOG_16]
 0=Región de unidades
@@ -118,14 +129,16 @@ Author=Steven Rogers
 
 [DIALOG_19]
 0=Teclas de acceso rápido
-3=Crea teclas de acceso rápido para acceder rápidamente a algunas funciones.
-4=Xreveal menú:
-5=Configuración:
-6=Habilitar Xreveal:
+3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
+4=Show Xreveal system tray menu:
+5=Show settings window:
+6=Enable/Disable Xreveal:
+7=Rip to ISO file:
+8=Rip to folder:
 
 [DIALOG_20]
 0=HD DVD
-3=Eliminar AACS (Sistema de contenido de acceso avanzado)
+3=&Enable HD DVD support
 4=Eliminar el título de la primera reproducción
 5=Eliminar UOP (prohibiciones de operación del usuario)
 6=Eliminar restricciones parentales
@@ -145,15 +158,33 @@ Author=Steven Rogers
 
 [DIALOG_24]
 0=Drive Information
+3=Drive:
+4=Serial number:
+5=Vendor specific:
+6=Bus encryption capable:
 
 [DIALOG_25]
 0=Import...
 3=Source keydb.db:
 4=Select or drop source keydb.db here
-5=Destination keydb.db：
+5=Destination keydb.db:
 
 [DIALOG_26]
 0=Content Hash Verifier
+
+[DIALOG_27]
+0=Sounds
+3=Play sound after opening disc
+4=Play sound after ripping disc
+5=Success sound:
+6=Error sound:
+
+[DIALOG_28]
+0=Create Dump File
+3=Please wait...
+4=Adding %s...
+5=<a>How to submit dump files?</a>
+6=The file has been successfully created.
 
 [DIALOG_A]
 0=Actualización de software
@@ -201,11 +232,11 @@ Author=Steven Rogers
 18=Xreveal no funcionará si %s esta ejecutando.\n\n¿Quieres cerrarlo?
 19=Xreveal está escaneando la unidad %C:
 20=El disco que ha insertado estará disponible en breve, ¡espere!
-21=¡Xreveal no está activa para la unidad %C:!
-22=¡No hay suficiente espacio libre en el disco %C:!
+21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
+22=Directory '%s' has not enough space!\nYou need an additional %s.
 23=Copiando %s...
-24=%.1f MB/s, Tiempo transcurrido: %s, Tiempo restante: %s
-25=¡Proceso completado con éxito!
+24=%.1f MB/s
+25=Operation successfully completed!
 26=No se encontró ninguna clave de descifrado en {%s}
 27=No se encontró BD+ FUT
 28=Xreveal failed to open disc, error code: %s.
@@ -221,8 +252,8 @@ Author=Steven Rogers
 38=%C:
 39=%C:\[%S]
 40=&Estado
-41=&Abrir
-42=&Crear archivo de registro
+41=&Open in Explorer
+42=&Create Dump File
 43=&Mostrar BD+ Fixup Table
 44=Ripear &Disco duro...
 45=Ripear &Imagen...
@@ -240,7 +271,7 @@ Author=Steven Rogers
 57=Este programa es gratuito.\n\nSi este programa te resulta útil, puedes hacer una <a>donación</a> para ayudarnos a mejorarlo.
 58=%s ya existe.\n¿Quieres cambiarlo?
 59=¿Está seguro de que desea cancelar?
-60=Región de unidades Blu-ray
+60=Your license expired on %s.
 61=Reproductor
 62=Código de región
 63=Cambios restantes
@@ -264,7 +295,7 @@ Author=Steven Rogers
 81=Date added
 82=MKB
 83=Main playlist
-84=BDP date
+84=BD+ date
 85=
 86=VID
 87=MK
@@ -292,3 +323,28 @@ Author=Steven Rogers
 109=Command line version (Windows/macOS/Linux)
 110=Abort
 111=Vendor specific
+112=Directory %s doesn't exist. Do you want to create it?
+113=When done: 
+114=Do nothing
+115=, 
+116=Eject disc
+117=Play sound
+118=Quit Xreveal
+119=No action
+120=Shutdown
+121=Sleep
+122=Hibernate
+123=Lock system
+124=Log off
+125=All Files
+126=ISO Files
+127=WAV Files
+128=KeyDB Files
+129=Database Files
+130=Select or drop the WAV file here
+131=Select or drop the KeyDB.cfg here
+132=%u%% complete
+133=Error reading from drive %C:!\nSectors: %u-%u
+134=Error reading %s!\nSectors: %u-%u
+135=Abort request acknowledged
+136=Copying...
