--- a/Xreveal_CHT.ini
+++ b/Xreveal_CHT.ini
@@ -43,6 +43,7 @@ Author=
 7=自動檢查更新(&S)
 8=<a>Check now</a>
 9=Automatically &report open failures to improve Xreveal
+10=&Prevent the system from sleeping while ripping
 
 [DIALOG_9]
 0=CD
@@ -50,17 +51,18 @@ Author=
 
 [DIALOG_10]
 0=DVD
-3=刪除CSS（內容擾亂系統）
+3=&Enable DVD support
 4=刪除 RC（區域代碼）
 5=刪除RCE（區域代碼增強）
 6=光碟區域代碼：
 7=移除 APS（模擬保護系統）
 8=刪除UOP（使用者操作禁止）
 9=刪除 ARccOS
+11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
 0=藍光
-3=刪除 AACS（進階存取內容系統）
+3=&Enable Blu-ray support
 4=刪除BD+
 5=刪除 RC（區域代碼）
 6=光碟區域代碼：
@@ -87,20 +89,29 @@ Author=
 8=為 UHD 啟用&LibreDrive
 
 [DIALOG_14]
-0=翻錄影像...
-1=開始
-2=停止
-3=&源驅動器：
-4=目標文件(&D):
-5=保持保護
-6=&Verify content hash
+1=Start
+3=Source
+4=Destination
+5=Options
+6=Info
+7=Type:
+8=Capacity:
+9=Protection:
+10=Free space:
+11=Capacity:
+12=&Keep protection
+13=&Verify content hash
+14=Create &md5 checksum file
+15=Create &dvdid.xml
 
 [DIALOG_15]
-0=翻錄到硬碟...
-1=開始
-2=停止
-3=&源驅動器：
-4=目標目錄(&D):
+0=Xreveal
+3=Source:
+4=Destination:
+6=Time elapsed:
+7=Time remaining:
+8=Read errors:
+9=Read rate:
 
 [DIALOG_16]
 0=玩家區域
@@ -118,14 +129,16 @@ Author=
 
 [DIALOG_19]
 0=熱鍵
-3=建立熱鍵以快速存取某些功能。
-4=X顯示選單：
-5=設定：
-6=啟用 Xreveal：
+3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
+4=Show Xreveal system tray menu:
+5=Show settings window:
+6=Enable/Disable Xreveal:
+7=Rip to ISO file:
+8=Rip to folder:
 
 [DIALOG_20]
 0=高清DVD
-3=刪除 AACS（進階存取內容系統）
+3=&Enable HD DVD support
 4=刪除第一個播放標題
 5=刪除UOP（使用者操作禁止）
 6=取消家長限制
@@ -145,15 +158,33 @@ Author=
 
 [DIALOG_24]
 0=Drive Information
+3=Drive:
+4=Serial number:
+5=Vendor specific:
+6=Bus encryption capable:
 
 [DIALOG_25]
 0=Import...
 3=Source keydb.db:
 4=Select or drop source keydb.db here
-5=Destination keydb.db：
+5=Destination keydb.db:
 
 [DIALOG_26]
 0=Content Hash Verifier
+
+[DIALOG_27]
+0=Sounds
+3=Play sound after opening disc
+4=Play sound after ripping disc
+5=Success sound:
+6=Error sound:
+
+[DIALOG_28]
+0=Create Dump File
+3=Please wait...
+4=Adding %s...
+5=<a>How to submit dump files?</a>
+6=The file has been successfully created.
 
 [DIALOG_A]
 0=版本更新
@@ -201,11 +232,11 @@ Author=
 18=如果 %s 正在運行，Xreveal 將無法運作。\n\n您想關閉它嗎？
 19=Xreveal 正在掃描驅動器 %C：
 20=您插入的光碟即將可用，請稍候！
-21=驅動器 %C: 的 Xreveal 未啟動！
-22=驅動器 %C: 上沒有足夠的可用空間！
+21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
+22=Directory '%s' has not enough space!\nYou need an additional %s.
 23=正在複製 %s...
-24=%.1f MB/s，已用時間：%s，剩餘時間：%s
-25=過程成功完成！
+24=%.1f MB/s
+25=Operation successfully completed!
 26=在 {%s} 中找不到解密金鑰
 27=未找到 BD+ FUT
 28=Xreveal failed to open disc, error code: %s.
@@ -221,8 +252,8 @@ Author=
 38=%C:
 39=%C:\[%S]
 40=狀態(&S)
-41=打開(&O)
-42=建立日誌檔案(&C)
+41=&Open in Explorer
+42=&Create Dump File
 43=轉儲 BD+ FUT(&D)
 44=Rip to &Folder...
 45=Rip to &ISO file...
@@ -240,7 +271,7 @@ Author=
 57=程式是免費軟體。\n\n如果程式對您有用，您可以<a>捐贈</a>來幫助我們改進它。
 58=%s 已存在。\n您要替換它嗎？
 59=您確定要取消嗎？
-60=藍光播放器區域
+60=Your license expired on %s.
 61=玩家
 62=地區
 63=剩餘更改
@@ -264,7 +295,7 @@ Author=
 81=Date added
 82=MKB
 83=Main playlist
-84=BDP date
+84=BD+ date
 85=
 86=VID
 87=MK
@@ -292,3 +323,28 @@ Author=
 109=Command line version (Windows/macOS/Linux)
 110=Abort
 111=Vendor specific
+112=Directory %s doesn't exist. Do you want to create it?
+113=When done: 
+114=Do nothing
+115=, 
+116=Eject disc
+117=Play sound
+118=Quit Xreveal
+119=No action
+120=Shutdown
+121=Sleep
+122=Hibernate
+123=Lock system
+124=Log off
+125=All Files
+126=ISO Files
+127=WAV Files
+128=KeyDB Files
+129=Database Files
+130=Select or drop the WAV file here
+131=Select or drop the KeyDB.cfg here
+132=%u%% complete
+133=Error reading from drive %C:!\nSectors: %u-%u
+134=Error reading %s!\nSectors: %u-%u
+135=Abort request acknowledged
+136=Copying...
