--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -43,6 +43,7 @@ Author=The Punisher
 7=Automatisch Online auf Updates überprüfen
 8=<a>Jetzt prüfen</a>
 9=Automatisch fehlgeschlagenes Öffnen einer Disc &melden um Xreveal zu verbessern
+10=&Prevent the system from sleeping while ripping
 
 [DIALOG_9]
 0=CD
@@ -50,17 +51,18 @@ Author=The Punisher
 
 [DIALOG_10]
 0=DVD
-3=DVD Unterstützung aktivieren
+3=&Enable DVD support
 4=Software-Regionalcode entfernen
 5=Regionalcode-Erweiterungsschutz entfernen
 6=Disc-Region:
 7=Macrovision entfernen
 8=Benutzereinschränkungen entfernen
 9=ARccOS entfernen
+11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
 0=Blu-Ray
-3=Blu-Ray Unterstützung aktivieren
+3=&Enable Blu-ray support
 4=BD+ Schutz entfernen
 5=Blu-Ray Region Code entfernen
 6=Disc-Region:
@@ -87,20 +89,29 @@ Author=The Punisher
 8=UHD-&LibreDrive aktivieren
 
 [DIALOG_14]
-0=Als Image auf Laufwerk rippen...
 1=Start
-2=Stopp
-3=&Quell-Laufwerk:
-4=&Zieldatei:
-5=Blu-ray Schutz nicht entfernen
-6=Inhalts-Hash &verifizieren
+3=Source
+4=Destination
+5=Options
+6=Info
+7=Type:
+8=Capacity:
+9=Protection:
+10=Free space:
+11=Capacity:
+12=&Keep protection
+13=&Verify content hash
+14=Create &md5 checksum file
+15=Create &dvdid.xml
 
 [DIALOG_15]
-0=Auf Laufwerk rippen...
-1=Start
-2=Stopp
-3=&Quell-Laufwerk:
-4=&Zielverzeichnis:
+0=Xreveal
+3=Source:
+4=Destination:
+6=Time elapsed:
+7=Time remaining:
+8=Read errors:
+9=Read rate:
 
 [DIALOG_16]
 0=Player-Region
@@ -118,14 +129,16 @@ Author=The Punisher
 
 [DIALOG_19]
 0=Hotkeys
-3=Erstellen Sie Tastatur-Hotkeys um Funktionen schnell zu erreichen.
-4=Xreveal Menü:
-5=Einstellungen:
-6=Xreveal aktivieren:
+3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
+4=Show Xreveal system tray menu:
+5=Show settings window:
+6=Enable/Disable Xreveal:
+7=Rip to ISO file:
+8=Rip to folder:
 
 [DIALOG_20]
 0=HD DVD
-3=AACS entfernen (Advanced Access Content System)
+3=&Enable HD DVD support
 4=Entfernung von z.B. Studio Trailer, uä.
 5=Benutzereinschränkungen entfernen (UOP)
 6=Entfernung von Benutzereinschränkungen für z.B. PowerDVD, uä.
@@ -145,6 +158,10 @@ Author=The Punisher
 
 [DIALOG_24]
 0=Laufwerk-Informationen
+3=Drive:
+4=Serial number:
+5=Vendor specific:
+6=Bus encryption capable:
 
 [DIALOG_25]
 0=Importieren...
@@ -154,6 +171,20 @@ Author=The Punisher
 
 [DIALOG_26]
 0=Content Hash Kontrolle
+
+[DIALOG_27]
+0=Sounds
+3=Play sound after opening disc
+4=Play sound after ripping disc
+5=Success sound:
+6=Error sound:
+
+[DIALOG_28]
+0=Create Dump File
+3=Please wait...
+4=Adding %s...
+5=<a>How to submit dump files?</a>
+6=The file has been successfully created.
 
 [DIALOG_A]
 0=Software-Update
@@ -201,11 +232,11 @@ Author=The Punisher
 18=Xreveal funktioniert nicht richtig wenn %s ausgeführt wird.\n\nMöchten Sie diese App schliessen?
 19=Xreveal durchsucht Laufwerk %C:
 20=Die eingelegte Disc wird in Kürze verfügbar sein, bitte haben Sie etwas Geduld!
-21=Xreveal ist nicht aktiv für Laufwerk %C:!
-22=Es gibt nicht genügend freien Speicherplatz auf Laufwerk %C:!
+21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
+22=Directory '%s' has not enough space!\nYou need an additional %s.
 23=Kopieren von %s ...
-24=%.1f MB/s, verstrichene Zeit: %s, verbleibende Zeit: %s
-25=Vorgang erfolgreich abgeschlossen!
+24=%.1f MB/s
+25=Operation successfully completed!
 26=Keine Entschlüsselungsdatei in {%s} gefunden
 27=Keine BD+ FUT gefunden
 28=Xreveal konnte die Disc nicht öffnen. Fehler-Code: %s.
@@ -221,8 +252,8 @@ Author=The Punisher
 38=%C:
 39=%C:\[%S]
 40=&Status
-41=&Öffnen
-42=Logdatei &erstellen
+41=&Open in Explorer
+42=&Create Dump File
 43=BD+ Fixup-Table &zeigen
 44=Auf &Festplattenlaufwerk rippen ...
 45=Als &Image auf Laufwerk rippen ...
@@ -240,7 +271,7 @@ Author=The Punisher
 57=Dieses Programm ist Freeware.\n\nWenn es ihnen gefällt, können sie gerne auf die <a>Pro-Version</a> erweitern.
 58=%s ist bereits vorhanden.\nMöchten Sie diese ersetzen?
 59=Sind Sie sicher, dass Sie abbrechen möchten?
-60=Blu-ray-Player-Region
+60=Your license expired on %s.
 61=Player
 62=Regionalcode
 63=Änderungen verbleibend
@@ -292,3 +323,28 @@ Author=The Punisher
 109=Eingabeaufforderungsversion (Windows/macOS/Linux)
 110=Abbrechen
 111=Herstellerspezifisch
+112=Directory %s doesn't exist. Do you want to create it?
+113=When done: 
+114=Do nothing
+115=, 
+116=Eject disc
+117=Play sound
+118=Quit Xreveal
+119=No action
+120=Shutdown
+121=Sleep
+122=Hibernate
+123=Lock system
+124=Log off
+125=All Files
+126=ISO Files
+127=WAV Files
+128=KeyDB Files
+129=Database Files
+130=Select or drop the WAV file here
+131=Select or drop the KeyDB.cfg here
+132=%u%% complete
+133=Error reading from drive %C:!\nSectors: %u-%u
+134=Error reading %s!\nSectors: %u-%u
+135=Abort request acknowledged
+136=Copying...
