--- a/Xreveal_FIN.ini
+++ b/Xreveal_FIN.ini
@@ -43,6 +43,7 @@ Author=TJL
 7=&Tarkista päivitykset automaattisesti
 8=<a>Check now</a>
 9=Automatically &report open failures to improve Xreveal
+10=&Prevent the system from sleeping while ripping
 
 [DIALOG_9]
 0=CD
@@ -50,17 +51,18 @@ Author=TJL
 
 [DIALOG_10]
 0=DVD
-3=Ota DVD-tuki käyttöön
+3=&Enable DVD support
 4=Poista DVD-aluekoodi
 5=Poista aluekoodin lisäsuojaus
 6=Aluekoodi:
 7=Poista analoginen suojausjärjestelmä
 8=Poista kielletyt käyttäjätoiminnot
 9=Poista ARccOS
+11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
 0=Blu-ray
-3=Ota käyttöön Blu-ray tuki
+3=&Enable Blu-ray support
 4=Poista BD+-suojaus
 5=Poista Blu-ray aluekoodi
 6=Aluekoodi:
@@ -87,20 +89,29 @@ Author=TJL
 8=Ota &LibreDrive käyttöön UHD:lle
 
 [DIALOG_14]
-0=Kopioi levykuvaksi...
-1=Aloita
-2=Lopeta
-3=&Lähdeasema:
-4=&Kohdetiedosto:
-5=Pidä suojaus (Blu-ray)
-6=&Verify content hash
+1=Start
+3=Source
+4=Destination
+5=Options
+6=Info
+7=Type:
+8=Capacity:
+9=Protection:
+10=Free space:
+11=Capacity:
+12=&Keep protection
+13=&Verify content hash
+14=Create &md5 checksum file
+15=Create &dvdid.xml
 
 [DIALOG_15]
-0=Kopioi kiintolevylle...
-1=Aloita
-2=Lopeta
-3=&Lähdeasema:
-4=&Kohdehakemisto:
+0=Xreveal
+3=Source:
+4=Destination:
+6=Time elapsed:
+7=Time remaining:
+8=Read errors:
+9=Read rate:
 
 [DIALOG_16]
 0=Soittimen alue
@@ -118,14 +129,16 @@ Author=TJL
 
 [DIALOG_19]
 0=Pikanäppäimet
-3=Luo pikanäppäimiä päästäksesi nopeasti joihinkin toimintoihin.
-4=Xreveal-valikko:
-5=Asetukset:
-6=Ota Xreveal käyttöön:
+3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
+4=Show Xreveal system tray menu:
+5=Show settings window:
+6=Enable/Disable Xreveal:
+7=Rip to ISO file:
+8=Rip to folder:
 
 [DIALOG_20]
 0=HD DVD
-3=Poista AACS (Advanced Access Content System)
+3=&Enable HD DVD support
 4=Poista ensimmäinen toistonimike
 5=Poista UOP (User Operation Prohibitions)
 6=Poista vanhempain rajoitukset
@@ -145,15 +158,33 @@ Author=TJL
 
 [DIALOG_24]
 0=Drive Information
+3=Drive:
+4=Serial number:
+5=Vendor specific:
+6=Bus encryption capable:
 
 [DIALOG_25]
 0=Import...
 3=Source keydb.db:
 4=Select or drop source keydb.db here
-5=Destination keydb.db：
+5=Destination keydb.db:
 
 [DIALOG_26]
 0=Content Hash Verifier
+
+[DIALOG_27]
+0=Sounds
+3=Play sound after opening disc
+4=Play sound after ripping disc
+5=Success sound:
+6=Error sound:
+
+[DIALOG_28]
+0=Create Dump File
+3=Please wait...
+4=Adding %s...
+5=<a>How to submit dump files?</a>
+6=The file has been successfully created.
 
 [DIALOG_A]
 0=Ohjelmistopäivitys
@@ -201,11 +232,11 @@ Author=TJL
 18=Xreveal ei toimi, jos %s on käynnissä.\n\nHaluatko sulkea sen?
 19=Xreveal skannaa asemaa %C:
 20=Syöttämäsi levy on pian saatavilla, odota!
-21=Xreveal ei ole valmis asemaa %C: varten!
-22=Asemalla %C: ei ole tarpeeksi vapaata tilaa!
+21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
+22=Directory '%s' has not enough space!\nYou need an additional %s.
 23=Kopioidaan %s...
-24=%.1f MB/s, Aikaa kulunut: %s, Aikaa jäljellä: %s
-25=Prosessi suoritettu onnistuneesti!
+24=%.1f MB/s
+25=Operation successfully completed!
 26=Salauksenpurkuavainta ei löytynyt kohteesta {%s}
 27=BD+ FUT:ta ei löytynyt
 28=Xreveal failed to open disc, error code: %s.
@@ -221,8 +252,8 @@ Author=TJL
 38=%C:
 39=%C:\[%S]
 40=&Tila
-41=&Avaa
-42=&Luo lokitiedosto
+41=&Open in Explorer
+42=&Create Dump File
 43=&Näytä BD+ -korjaustaulukko
 44=Kopioi &kiintolevylle...
 45=Kopioi &levykuvaan...
@@ -240,7 +271,7 @@ Author=TJL
 57=Tämä ohjelma on ilmainen.\n\nJos tämä ohjelma on sinulle hyödyllinen, voit tehdä <a>lahjoituksen</a> auttaaksesi meitä parantamaan sitä.
 58=Tiedosto [%s] on jo olemassa. Haluatko korvata olemassaolevan tiedoston?
 59=Haluatko varmasti keskeyttää?
-60=Blu-ray-soittimen alue
+60=Your license expired on %s.
 61=Soitin
 62=Aluekoodi
 63=Muutoksia jäljellä
@@ -264,7 +295,7 @@ Author=TJL
 81=Date added
 82=MKB
 83=Main playlist
-84=BDP date
+84=BD+ date
 85=
 86=VID
 87=MK
@@ -292,3 +323,28 @@ Author=TJL
 109=Command line version (Windows/macOS/Linux)
 110=Abort
 111=Vendor specific
+112=Directory %s doesn't exist. Do you want to create it?
+113=When done: 
+114=Do nothing
+115=, 
+116=Eject disc
+117=Play sound
+118=Quit Xreveal
+119=No action
+120=Shutdown
+121=Sleep
+122=Hibernate
+123=Lock system
+124=Log off
+125=All Files
+126=ISO Files
+127=WAV Files
+128=KeyDB Files
+129=Database Files
+130=Select or drop the WAV file here
+131=Select or drop the KeyDB.cfg here
+132=%u%% complete
+133=Error reading from drive %C:!\nSectors: %u-%u
+134=Error reading %s!\nSectors: %u-%u
+135=Abort request acknowledged
+136=Copying...
