--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -43,6 +43,7 @@ Author=Andex
 7=&Rechercher les mises à jour automatiquement
 8= <a>Rechercher maintenant!</a>
 9=&Signaler automatiquement les codes d'erreur de lecture pour améliorer Xreveal
+10=&Prevent the system from sleeping while ripping
 
 [DIALOG_9]
 0=CD
@@ -50,17 +51,18 @@ Author=Andex
 
 [DIALOG_10]
 0=DVD
-3=Supprimer &CSS (Content Scramble System)
+3=&Enable DVD support
 4=Supprimer &RC (Region Code)
 5=Supprimer RC&E (Region Code Enhancement)
 6=Région du &disque:
 7=Supprimer &APS (Analog Protection System)
 8=Supprimer &UOPs (User Operation Prohibitions)
 9=Supprimer ARcc&OS (Advanced Regional copy control Operating Solution)
+11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
 0=Blu-ray
-3=Supprimer &AACS (Advanced Access Content System)
+3=&Enable Blu-ray support
 4=Supprimer &BD+
 5=Supprimer &RC (Region Code)
 6=Région du &disque:
@@ -87,20 +89,29 @@ Author=Andex
 8=&Activer LibreDrive pour les disques UHD
 
 [DIALOG_14]
-0=Copier un disque en fichier ISO
-1=&Démarrer
-2=&Arrêter
-3=&Lecteur source:
-4=&Fichier de destination:
-5=&Conserver la protection (Supprime seulement 'Bus Encryption')
-6=&Vérifier l'intégrité des données
+1=Start
+3=Source
+4=Destination
+5=Options
+6=Info
+7=Type:
+8=Capacity:
+9=Protection:
+10=Free space:
+11=Capacity:
+12=&Keep protection
+13=&Verify content hash
+14=Create &md5 checksum file
+15=Create &dvdid.xml
 
 [DIALOG_15]
-0=Copier un disque dans un dossier
-1=&Démarrer
-2=&Arrêter
-3=&Lecteur source:
-4=D&ossier de destination:
+0=Xreveal
+3=Source:
+4=Destination:
+6=Time elapsed:
+7=Time remaining:
+8=Read errors:
+9=Read rate:
 
 [DIALOG_16]
 0=Régions
@@ -118,14 +129,16 @@ Author=Andex
 
 [DIALOG_19]
 0=Raccourcis
-3=Les raccourcis créés ici fonctionnent dans Windows quand Xreveal s'exécute en arrière-plan.
-4=Menu de Xreveal:
-5=Paramètres:
-6=Activer/Désactiver:
+3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
+4=Show Xreveal system tray menu:
+5=Show settings window:
+6=Enable/Disable Xreveal:
+7=Rip to ISO file:
+8=Rip to folder:
 
 [DIALOG_20]
 0=HD DVD
-3=Supprimer &AACS (Advanced Access Content System)
+3=&Enable HD DVD support
 4=Supprimer le 1er &titre lisible
 5=Supprimer &UOPs (User Operation Prohibitions)
 6=Supprimer les &restrictions parentales
@@ -145,15 +158,33 @@ Author=Andex
 
 [DIALOG_24]
 0=Drive Information
+3=Drive:
+4=Serial number:
+5=Vendor specific:
+6=Bus encryption capable:
 
 [DIALOG_25]
 0=Import...
 3=Source keydb.db:
 4=Select or drop source keydb.db here
-5=Destination keydb.db：
+5=Destination keydb.db:
 
 [DIALOG_26]
 0=Content Hash Verifier
+
+[DIALOG_27]
+0=Sounds
+3=Play sound after opening disc
+4=Play sound after ripping disc
+5=Success sound:
+6=Error sound:
+
+[DIALOG_28]
+0=Create Dump File
+3=Please wait...
+4=Adding %s...
+5=<a>How to submit dump files?</a>
+6=The file has been successfully created.
 
 [DIALOG_A]
 0=Mise à jour
@@ -201,11 +232,11 @@ Author=Andex
 18=Xreveal ne fonctionnera pas si %s est en cours d'exécution.\n\nVoulez-vous fermer %s?
 19=Xreveal scanne le lecteur %C:
 20=Le disque sera disponible dans quelques instants, merci de patienter...
-21=Xreveal n'est pas actif pour le lecteur %C:!
-22=Il n'y a pas suffisamment d'espace disque sur le lecteur %C:!
+21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
+22=Directory '%s' has not enough space!\nYou need an additional %s.
 23=Copie en cours %s...
-24=%.1f Mo/s, Temps écoulé: %s, restant: %s
-25=Processus terminé!
+24=%.1f Mo/s
+25=Operation successfully completed!
 26=Pas de clé de déchiffrement trouvée dans {%s}!
 27=Pas de BD+ FUT trouvé!
 28=Xreveal n'a pas réussi à ouvrir le disque!\nCode d'erreur: %s
@@ -221,8 +252,8 @@ Author=Andex
 38=%C:
 39=%C:\[%S]
 40=&Statut
-41=&Ouvrir
-42=&Créer un fichier journal
+41=&Open in Explorer
+42=&Create Dump File
 43=&Montrer le tableau des correctifs BD+
 44=Copier dans un &dossier...
 45=Copier en &fichier ISO...
@@ -240,7 +271,7 @@ Author=Andex
 57=Vous utilisez la version gratuite de Xreveal!\n\nPassez en <a>version Pro</a> pour débloquer des fonctionnalités supplémentaires ;-)
 58='%s' existe déjà!\nVoulez-vous le remplacer?
 59=Êtes-vous sûr de vouloir annuler?
-60=Région de lecteur Blu-ray
+60=Your license expired on %s.
 61=Lecteur
 62=Code région
 63=Modifications restantes
@@ -292,3 +323,28 @@ Author=Andex
 109=Version en ligne de commande (Windows/macOS/Linux)
 110=Abandonner
 111=Fabricant
+112=Directory %s doesn't exist. Do you want to create it?
+113=When done: 
+114=Do nothing
+115=, 
+116=Eject disc
+117=Play sound
+118=Quit Xreveal
+119=No action
+120=Shutdown
+121=Sleep
+122=Hibernate
+123=Lock system
+124=Log off
+125=All Files
+126=ISO Files
+127=WAV Files
+128=KeyDB Files
+129=Database Files
+130=Select or drop the WAV file here
+131=Select or drop the KeyDB.cfg here
+132=%u%% complete
+133=Error reading from drive %C:!\nSectors: %u-%u
+134=Error reading %s!\nSectors: %u-%u
+135=Abort request acknowledged
+136=Copying...
