--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -43,6 +43,7 @@ Author=Re*Index.(ot_inc)
 7=自動的にアップデートを確認(&C)
 8=<a>Check now</a>
 9=Automatically &report open failures to improve Xreveal
+10=&Prevent the system from sleeping while ripping
 
 [DIALOG_9]
 0=CD
@@ -50,17 +51,18 @@ Author=Re*Index.(ot_inc)
 
 [DIALOG_10]
 0=DVD
-3=DVDプロテクトを解除
+3=&Enable DVD support
 4=地域コードを削除
 5=リージョンコードエンハンスメントを解除
 6=地域コード:
 7=アナログプロテクトを解除
 8=ユーザー操作禁止を解除
 9=ARccOSを削除
+11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
 0=Blu-ray
-3=Blu-rayプロテクトを解除
+3=&Enable Blu-ray support
 4=BD+の解除
 5=Blu-ray地域コードを削除
 6=ディスクのリージョン:
@@ -87,20 +89,29 @@ Author=Re*Index.(ot_inc)
 8=UHD 用の LibreDrive を有効にする(&L)
 
 [DIALOG_14]
-0=ディスクイメージをリッピング...
-1=開始
-2=停止
-3=ドライブ(&S):
-4=出力先(&D):
-5=プロテクトを解除しない(Blu-ray)
-6=&Verify content hash
+1=Start
+3=Source
+4=Destination
+5=Options
+6=Info
+7=Type:
+8=Capacity:
+9=Protection:
+10=Free space:
+11=Capacity:
+12=&Keep protection
+13=&Verify content hash
+14=Create &md5 checksum file
+15=Create &dvdid.xml
 
 [DIALOG_15]
-0=ハードディスクにリッピング...
-1=開始
-2=停止
-3=ドライブ(&S):
-4=出力先(&D):
+0=Xreveal
+3=Source:
+4=Destination:
+6=Time elapsed:
+7=Time remaining:
+8=Read errors:
+9=Read rate:
 
 [DIALOG_16]
 0=プレーヤーのリージョン
@@ -118,14 +129,16 @@ Author=Re*Index.(ot_inc)
 
 [DIALOG_19]
 0=ホットキー
-3=一部の機能に素早くアクセスするホットキーを作成できます。
-4=Xrevealメニュー:
-5=設定:
-6=Xrevealを有効化:
+3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
+4=Show Xreveal system tray menu:
+5=Show settings window:
+6=Enable/Disable Xreveal:
+7=Rip to ISO file:
+8=Rip to folder:
 
 [DIALOG_20]
 0=HD DVD
-3=AACS (アドバンスト アクセス コンテンツ システム) を削除します
+3=&Enable HD DVD support
 4=ファーストプレイタイトルを削除
 5=UOP の削除 (ユーザー操作の禁止)
 6=保護者による制限を解除する
@@ -145,15 +158,33 @@ Author=Re*Index.(ot_inc)
 
 [DIALOG_24]
 0=Drive Information
+3=Drive:
+4=Serial number:
+5=Vendor specific:
+6=Bus encryption capable:
 
 [DIALOG_25]
 0=Import...
 3=Source keydb.db:
 4=Select or drop source keydb.db here
-5=Destination keydb.db：
+5=Destination keydb.db:
 
 [DIALOG_26]
 0=Content Hash Verifier
+
+[DIALOG_27]
+0=Sounds
+3=Play sound after opening disc
+4=Play sound after ripping disc
+5=Success sound:
+6=Error sound:
+
+[DIALOG_28]
+0=Create Dump File
+3=Please wait...
+4=Adding %s...
+5=<a>How to submit dump files?</a>
+6=The file has been successfully created.
 
 [DIALOG_A]
 0=ソフトウェアアップデート
@@ -201,11 +232,11 @@ Author=Re*Index.(ot_inc)
 18=%sの動作中にXrevealは動作しません。\n\n終了させますか？
 19=Xrevealは%C:ドライブをスキャンしています。
 20=ディスクはまもなく利用できます。お待ちください…
-21=Xrevealは%C:を解除しません。
-22=%C:に十分な空き領域がありません。
+21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
+22=Directory '%s' has not enough space!\nYou need an additional %s.
 23=%sをコピー中
-24=%.1f MB/s,経過時間: %s,残り時間: %s
-25=処理が完了しました。
+24=%.1f MB/s
+25=Operation successfully completed!
 26={%s} に復号化キーが見つかりません
 27=BD+ FUT が見つかりません
 28=Xreveal failed to open disc, error code: %s.
@@ -221,8 +252,8 @@ Author=Re*Index.(ot_inc)
 38=%C:
 39=%C:\[%S]
 40=情報(&S)
-41=開く(&O)
-42=ロゴファイルを作成(&C)
+41=&Open in Explorer
+42=&Create Dump File
 43=フィックスアップテーブルを表示(&S)
 44=ハードディスクにリッピング(&H)
 45=イメージファイルにリッピング(&I)
@@ -240,7 +271,7 @@ Author=Re*Index.(ot_inc)
 57=このプログラムはフリーウェアです。\n\nこのプログラムが役に立った場合は、<a>寄付</a>をして改善に役立ててください。
 58=%sはすでに存在します。\n置き換えますか？
 59=本当にキャンセルしますか？
-60=Blu-rayプレーヤーのリージョン
+60=Your license expired on %s.
 61=プレーヤー
 62=リージョンコード
 63=残り時間
@@ -264,7 +295,7 @@ Author=Re*Index.(ot_inc)
 81=Date added
 82=MKB
 83=Main playlist
-84=BDP date
+84=BD+ date
 85=
 86=VID
 87=MK
@@ -292,3 +323,28 @@ Author=Re*Index.(ot_inc)
 109=Command line version (Windows/macOS/Linux)
 110=Abort
 111=Vendor specific
+112=Directory %s doesn't exist. Do you want to create it?
+113=When done: 
+114=Do nothing
+115=, 
+116=Eject disc
+117=Play sound
+118=Quit Xreveal
+119=No action
+120=Shutdown
+121=Sleep
+122=Hibernate
+123=Lock system
+124=Log off
+125=All Files
+126=ISO Files
+127=WAV Files
+128=KeyDB Files
+129=Database Files
+130=Select or drop the WAV file here
+131=Select or drop the KeyDB.cfg here
+132=%u%% complete
+133=Error reading from drive %C:!\nSectors: %u-%u
+134=Error reading %s!\nSectors: %u-%u
+135=Abort request acknowledged
+136=Copying...
