--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -43,6 +43,7 @@ Author=Sopor
 7=Sök efter uppdateringar &automatiskt
 8=<a>Check now</a>
 9=Automatically &report open failures to improve Xreveal
+10=&Prevent the system from sleeping while ripping
 
 [DIALOG_9]
 0=CD
@@ -50,17 +51,18 @@ Author=Sopor
 
 [DIALOG_10]
 0=DVD
-3=Aktivera DVD-stöd
+3=&Enable DVD support
 4=Ta bort programvaruregionskod
 5=Ta bort skyddet för regionkodsförbättring
 6=Skivregion:
 7=Ta bort analogt skyddssystem
 8=Ta bort förbjudna användaråtgärder
 9=Ta bort ARccOS
+11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
 0=Bluray
-3=Aktivera Bluray-stöd
+3=&Enable Blu-ray support
 4=Ta bort skyddet BD+
 5=Ta bort Bluray-regionskod
 6=Skivregion:
@@ -87,20 +89,29 @@ Author=Sopor
 8=Aktivera &LibreDrive för UHD
 
 [DIALOG_14]
-0=Kopiera till avbild...
-1=Starta
-2=Stoppa
-3=&Källenhet:
-4=&Målfil:
-5=Behåll skydd (Bluray)
-6=&Verify content hash
+1=Start
+3=Source
+4=Destination
+5=Options
+6=Info
+7=Type:
+8=Capacity:
+9=Protection:
+10=Free space:
+11=Capacity:
+12=&Keep protection
+13=&Verify content hash
+14=Create &md5 checksum file
+15=Create &dvdid.xml
 
 [DIALOG_15]
-0=Kopiera till hårddisk...
-1=Starta
-2=Stoppa
-3=&Källenhet:
-4=&Målkatalog:
+0=Xreveal
+3=Source:
+4=Destination:
+6=Time elapsed:
+7=Time remaining:
+8=Read errors:
+9=Read rate:
 
 [DIALOG_16]
 0=spelarens region
@@ -118,14 +129,16 @@ Author=Sopor
 
 [DIALOG_19]
 0=Snabbtangenter
-3=Skapa snabbtangenter för att snabbt komma åt vissa funktioner.
-4=Xreveal-meny:
-5=Inställningar:
-6=Aktivera Xreveal:
+3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
+4=Show Xreveal system tray menu:
+5=Show settings window:
+6=Enable/Disable Xreveal:
+7=Rip to ISO file:
+8=Rip to folder:
 
 [DIALOG_20]
 0=HD DVD
-3=Ta bort AACS (Advanced Access Content System)
+3=&Enable HD DVD support
 4=Ta bort första speltiteln
 5=Ta bort UOPs (User Operation Prohibitions)
 6=Ta bort föräldrabegränsningar
@@ -145,15 +158,33 @@ Author=Sopor
 
 [DIALOG_24]
 0=Drive Information
+3=Drive:
+4=Serial number:
+5=Vendor specific:
+6=Bus encryption capable:
 
 [DIALOG_25]
 0=Import...
 3=Source keydb.db:
 4=Select or drop source keydb.db here
-5=Destination keydb.db：
+5=Destination keydb.db:
 
 [DIALOG_26]
 0=Content Hash Verifier
+
+[DIALOG_27]
+0=Sounds
+3=Play sound after opening disc
+4=Play sound after ripping disc
+5=Success sound:
+6=Error sound:
+
+[DIALOG_28]
+0=Create Dump File
+3=Please wait...
+4=Adding %s...
+5=<a>How to submit dump files?</a>
+6=The file has been successfully created.
 
 [DIALOG_A]
 0=Programuppdatering
@@ -201,11 +232,11 @@ Author=Sopor
 18=Xreveal fungerar inte om %s körs.\n\nVill du stänga det?
 19=Xreveal söker igenom enhet %C:
 20=Skivan du har satt i kommer att bli tillgänglig inom kort, vänta!
-21=Xreveal är inte aktiv för enheten %C:!
-22=Det finns inte tillräckligt med ledigt utrymme på enhet %C:!
+21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
+22=Directory '%s' has not enough space!\nYou need an additional %s.
 23=Kopierar %s...
-24=%.1f MB/s, Tiden som gått: %s, Återstående tid: %s
-25=Processen har slutförts utan fel!
+24=%.1f MB/s
+25=Operation successfully completed!
 26=Ingen dekrypteringsnyckel hittades i {%s}
 27=Ingen BD+ FUT hittades
 28=Xreveal failed to open disc, error code: %s.
@@ -221,8 +252,8 @@ Author=Sopor
 38=%C:
 39=%C:\[%S]
 40=&Status
-41=&Öppna
-42=Skapa &loggfil
+41=&Open in Explorer
+42=&Create Dump File
 43=&Visa fixa till-tabeller för BD+
 44=Kopiera till &hårddisk...
 45=Kopiera till avb&ild...
@@ -240,7 +271,7 @@ Author=Sopor
 57=Detta program är gratisprogram.\n\nOm det här programmet är användbart för dig kan du göra en <a>donation</a> för att hjälpa oss att förbättra det.
 58=%s existerar redan.\nVill du ersätta den?
 59=Är du säker på att du vill avbryta?
-60=Blu-ray-spelarens region
+60=Your license expired on %s.
 61=Spelare
 62=Regionkod
 63=Återstående antal ändringar
@@ -264,7 +295,7 @@ Author=Sopor
 81=Date added
 82=MKB
 83=Main playlist
-84=BDP date
+84=BD+ date
 85=
 86=VID
 87=MK
@@ -292,3 +323,28 @@ Author=Sopor
 109=Command line version (Windows/macOS/Linux)
 110=Abort
 111=Vendor specific
+112=Directory %s doesn't exist. Do you want to create it?
+113=When done: 
+114=Do nothing
+115=, 
+116=Eject disc
+117=Play sound
+118=Quit Xreveal
+119=No action
+120=Shutdown
+121=Sleep
+122=Hibernate
+123=Lock system
+124=Log off
+125=All Files
+126=ISO Files
+127=WAV Files
+128=KeyDB Files
+129=Database Files
+130=Select or drop the WAV file here
+131=Select or drop the KeyDB.cfg here
+132=%u%% complete
+133=Error reading from drive %C:!\nSectors: %u-%u
+134=Error reading %s!\nSectors: %u-%u
+135=Abort request acknowledged
+136=Copying...
